--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -49,11 +49,13 @@
   <div id="contents">
     <img src="stormbringer.gif" width="100%">
 
-  <h1>Game Industry Trends[Lv.9]</h1><br>
+  <h1>Game Industry Trends[Lv.10]</h1><br>
   <h2 style="text-align:center">Reality is a game</h2><br><br><br>
 
 
 
+  <a>10/13/2020 국내뉴스 훑어보기</a><br>
+  <a></a><a></a><a></a><a></a>
 
   <a>10/12/2020 국내뉴스 훑어보기</a><br>
   <a></a><a></a><a></a><a></a>
