--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,11 +52,29 @@
 
 
 
-  <h1>The War of Taiji[Lv.34]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.38]</h1><br><br><br>
 
 
 
 
+  <a>10/13/2020 미국증시 TOP GAINERS 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+  <a>10/13/2020 한국증시 상한가 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+  <a>10/12/2020 미국증시 TOP GAINERS 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+  <a>10/12/2020 한국증시 상한가 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+
+  <a href="https://www.youtube.com/watch?v=RzcDa16ALKQ&t=2s" target="_blank" title="Humbled Trader">
+    How to Trade Stock Earnings Gaps- $SNAP $TSLA Earnings Trade $ROKU $OBLN $PCG Weekly Trade Recap</a><br>
+
+  <a href="https://www.youtube.com/watch?v=D8KUCrRmfzI" target="_blank" title="Humbled Trader">
+    MUST WATCH: Penny Stock Trading Psychology (The Untold SECRET $SES $BIMI )</a><br>
 
   <a>10/9/2020 미국증시 TOP GAINERS 분석</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
