--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -57,6 +57,8 @@
 
 
 
+  <a>신삼국지TV시리즈 E82</a><br>
+  <a>신삼국지TV시리즈 E81</a><br>
   <a>신삼국지TV시리즈 E80</a><br>
   <a>신삼국지TV시리즈 E79</a><br>
   <a>신삼국지TV시리즈 E78</a><br>
