--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,13 +50,15 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.86]</h1>
+    <h1>Karazhan Library[Lv.88]</h1>
 
     <p style="margin-top:45px;"><pre>
 
 
 
-    <h2><strong>경제[Lv.38]</h2></strong>
+    <h2><strong>경제[Lv.40]</h2></strong>
+      [하마터면 세금상식도 모르고 세금 낼 뻔했다]-최용규<br>
+      [장하준의 경제학 강의]-장하준<br>
       [코로나 투자 전쟁]-정채진·박석중·이광수·김한진·김일구·여의도클라스·윤지호·최준영<br>
       [언컨택트]-김용섭<br>
       [시간여행TV의 주식투자 전략]-시간여행TV<br>
@@ -162,6 +164,8 @@
 
     <p><pre>
       <h2>2020년 10월 독서</h2>
+        <li>경제:[하마터면 세금상식도 모르고 세금 낼 뻔했다]-최용규</li>
+        <li>경제:[장하준의 경제학 강의]-장하준</li>
         <li>사회:[세계미래보고서 2035-2055]-박영숙·제롬 글렌</li>
         <li>경제:[코로나 투자 전쟁]-정채진·박석중·이광수·김한진·김일구·여의도클라스·윤지호·최준영</li>
         <li>경제:[언컨택트]-김용섭</li>
