--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -54,6 +54,17 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=f9JdASSmRuI" target="_blank" title="아쿠멘터리">
+    어항속 나타나는 벌레종류(거머리, 플라나리아, 미즈지렁이, 물벼룩, 삿갓조개 등)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=GLYp3h_80P0" target="_blank" title="아쿠멘터리">
+    수족관 창업, 물방 준비중이라면 참고하세요! 시스템 공개합니다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=obtBOpa203s" target="_blank" title="아쿠멘터리">
+    산호는 어떻게 번식할까? 연산호 프랙치는법</a><br>
+
   <a>10/13/2020 국내뉴스 훑어보기</a><br>
   <a></a><a></a><a></a><a></a>
 
