--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,13 +50,14 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.88]</h1>
+    <h1>Karazhan Library[Lv.92]</h1>
 
     <p style="margin-top:45px;"><pre>
 
 
 
-    <h2><strong>경제[Lv.40]</h2></strong>
+    <h2><strong>경제[Lv.41]</h2></strong>
+      [돈의 흐름을 읽는 습관]-차칸양<br>
       [하마터면 세금상식도 모르고 세금 낼 뻔했다]-최용규<br>
       [장하준의 경제학 강의]-장하준<br>
       [코로나 투자 전쟁]-정채진·박석중·이광수·김한진·김일구·여의도클라스·윤지호·최준영<br>
@@ -118,7 +119,8 @@
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
       [나도 아직 나를 모른다]-허지원<br>
-    <h2><strong>처세술[Lv.7]</h2></strong>
+    <h2><strong>처세술[Lv.8]</h2></strong>
+      <b>3X[끌리는 말투에는 비밀이 있다]-장차오</b><br>
       [포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만<br>
       [손자병법]-손자<br>
       [제갈량문집]-제갈량<br>
@@ -127,13 +129,15 @@
       [마음을 훔치는 대화법]-임철웅<br>
       2x[침묵이라는 무기]-코르넬리아 토프<br>
     <h2><strong>경영[Lv.6]</h2></strong>
+      [배민다움]-홍성태<br>
       <b>3X[적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</b><br>
       [채리티:워터]-스캇 해리슨<br>
       [반대의 놀라운 힘]-샬런 네메스<br>
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
-    <h2><strong>사회[Lv.4]</h2></strong>
+    <h2><strong>사회[Lv.5]</h2></strong>
+      [트렌드 모니터(2021)]-최인수<br>
       [세계미래보고서 2035-2055]-박영숙·제롬 글렌<br>
       [도덕적 인간은 왜 나쁜 사회를 만드는가]-로랑 베그<br>
       [협력의 역설]-애덤 카헤인<br>
@@ -153,7 +157,7 @@
       [잠]-베르나르 베르베르<br>
       [82년생 김지영]-조남주<br>
     <h2><strong>에세이[Lv.2]</h2></strong>
-      [무례한 사람에게 웃으며 대처하는 법]-정문정
+      [무례한 사람에게 웃으며 대처하는 법]-정문정<br>
       [이창호의 부득탐승]-이창호<br>
     </p></pre>
 
@@ -161,9 +165,16 @@
 
 
 
+    <p><pre>
+      <h2>2020년 11월 독서</h2>
+        <li>사회:[트렌드 모니터(2021)]-최인수</li>
+        <li>경영:[배민다움]-홍성태</li>
+        <li>경제:[돈의 흐름을 읽는 습관]-차칸양</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 10월 독서</h2>
+        <li>처세술:[끌리는 말투에는 비밀이 있다]-장차오</li>
         <li>경제:[하마터면 세금상식도 모르고 세금 낼 뻔했다]-최용규</li>
         <li>경제:[장하준의 경제학 강의]-장하준</li>
         <li>사회:[세계미래보고서 2035-2055]-박영숙·제롬 글렌</li>
