--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -57,6 +57,17 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=uGww5e2CEJQ" target="_blank" title="5분 뚝딱 철학">
+    결정론 : 미래는 이미 결정되어 있는가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=u4ifH9077sk" target="_blank" title="5분 뚝딱 철학">
+    라플라스 : 라플라스의 악마 (feat. 데카르트)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Nc3rZh8-pHA&t=16s" target="_blank" title="5분 뚝딱 철학">
+    로크 : 타불라 라사 (feat. 데카르트)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xmYQTyhOn-8" target="_blank" title="5분 뚝딱 철학">
+    사이먼 사이넥 : 골든 서클</a><br>
 
   <a href="https://www.youtube.com/watch?v=wNyv84wu_xM" target="_blank" title="5분 뚝딱 철학">
     비트겐슈타인 : 논리철학논고</a><br>
