--- a/The_economist.html
+++ b/The_economist.html
@@ -57,6 +57,14 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=sVQYf0s49lE" target="_blank" title="자유잍튜브THE">
+    추풍낙엽 한국 시장, 지금 시점 무엇을 보는게 좋을까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=BTfdupHrng0&t=28s" target="_blank" title="자유잍튜브THE">
+    대중과 반대로 가라? 내가 개미이고 대중인데, 반대로 갈 수 있을까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Q9hG_elhWdE" target="_blank" title="자유잍튜브THE">
+    상상하고 행동하라. 주식 시장에서 무거운 엉덩이는 필수다.</a><br>
 
   <a href="https://www.youtube.com/watch?v=bLTzGerT8Ko" target="_blank" title="자유잍튜브THE">
     지금껏 잘못 골랐다면, 이제부터 잘 고르면 된다.</a><br>
