--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -62,7 +62,9 @@
 
 
 
-
+  <a href="https://www.youtube.com/watch?v=S230cNo7NXw" target="_blank" title="일헥타르TV">
+    알아서 트래픽 모아주는 블로그 포스팅 방법｜스마트스토어 노하우
+</a><br>
 
   <h2>[올인원 패키지 : 안드로이드 앱 개발]</h2>
   <p>
