--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -50,13 +50,28 @@
   <div id="contents">
     <img src="remember.jpg" width="100%">
 
-    <h1 style="text-align:center">懲毖錄[Lv.17]</h1><br>
+    <h1 style="text-align:center">懲毖錄[Lv.18]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
   <br>
 
 
 
+
+
+  <a>신삼국지TV시리즈 E95</a><br>
+  <a>신삼국지TV시리즈 E94</a><br>
+  <a>신삼국지TV시리즈 E93</a><br>
+  <a>신삼국지TV시리즈 E92</a><br>
+  <a>신삼국지TV시리즈 E91</a><br>
+  <a>신삼국지TV시리즈 E90</a><br>
+  <a>신삼국지TV시리즈 E89</a><br>
+  <a>신삼국지TV시리즈 E88</a><br>
+  <a>신삼국지TV시리즈 E87</a><br>
+  <a>신삼국지TV시리즈 E86</a><br>
+  <a>신삼국지TV시리즈 E85</a><br>
+  <a>신삼국지TV시리즈 E84</a><br>
+  <a>신삼국지TV시리즈 E83</a><br>
   <a>신삼국지TV시리즈 E82</a><br>
   <a>신삼국지TV시리즈 E81</a><br>
   <a>신삼국지TV시리즈 E80</a><br>
