--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -41,8 +41,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
@@ -50,13 +50,15 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.92]</h1>
+    <h1>Karazhan Library[Lv.99]</h1>
 
     <p style="margin-top:45px;"><pre>
 
 
 
-    <h2><strong>경제[Lv.41]</h2></strong>
+    <h2><strong>경제[Lv.43]</h2></strong>
+      [플랫폼 레볼루션]-마셜 밴 앨스타인<br>
+      [어떻게 광고해야 팔리나요]-김종섭<br>
       [돈의 흐름을 읽는 습관]-차칸양<br>
       [하마터면 세금상식도 모르고 세금 낼 뻔했다]-최용규<br>
       [장하준의 경제학 강의]-장하준<br>
@@ -113,8 +115,9 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.5]</h2></strong>
-      <b>5x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b></a><br>
+    <h2><strong>심리학[Lv.6]</h2></strong>
+      [욕망의 진화]-데이비드 버스<br>
+      <b>5x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
       [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -136,7 +139,9 @@
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
-    <h2><strong>사회[Lv.5]</h2></strong>
+    <h2><strong>사회[Lv.7]</h2></strong>
+      [플랫폼 레볼루션]-마셜 밴 앨스타인<br>
+      [디지털 트렌드 2021]-권병일<br>
       [트렌드 모니터(2021)]-최인수<br>
       [세계미래보고서 2035-2055]-박영숙·제롬 글렌<br>
       [도덕적 인간은 왜 나쁜 사회를 만드는가]-로랑 베그<br>
@@ -145,7 +150,9 @@
     <h2><strong>과학[Lv.2]</h2></strong>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>자기계발[Lv.3]</h2></strong>
+    <h2><strong>자기계발[Lv.5]</h2></strong>
+      [정리하는 뇌]-대니얼 J. 레비틴<br>
+      [커피 한 잔의 명상으로 10억을 번 사람들]-오시마 준이치<br>
       [최강 멘탈]-쓰지 유시후미<br>
       [지친 당신에게 고요를 선물합니다]-팀 콜린스<br>
       2X[기획자의 습관]-최장순<br>
@@ -165,11 +172,23 @@
 
 
 
+
+    <p><pre>
+      <h2>2020년 12월 독서</h2>
+
+    </p></pre>
+
     <p><pre>
       <h2>2020년 11월 독서</h2>
+        <li>자기계발:[정리하는 뇌]-대니얼 J. 레비틴</li>
+        <li>사회:[플랫폼 레볼루션]-마셜 밴 앨스타인</li>
+        <li>경제:[어떻게 광고해야 팔리나요]-김종섭</li>
+        <li>심리:[욕망의 진화]-데이비드 버스</li>
+        <li>자기계발:[커피 한 잔의 명상으로 10억을 번 사람들]-오시마 준이치</li>
+        <li>사회:[디지털 트렌드 2021]-권병일</li>
+        <li>경제:[돈의 흐름을 읽는 습관]-차칸양</li>
         <li>사회:[트렌드 모니터(2021)]-최인수</li>
         <li>경영:[배민다움]-홍성태</li>
-        <li>경제:[돈의 흐름을 읽는 습관]-차칸양</li>
     </p></pre>
 
     <p><pre>
@@ -329,8 +348,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
