--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -41,8 +41,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
@@ -398,8 +398,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
