--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -41,8 +41,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
@@ -51,11 +51,21 @@
     <img src="인간의아이여.jpg" width="100%">
 
 
-  <h1>Show Yourself[Lv.12]</h1><br><br><br>
+  <h1>Show Yourself[Lv.13]</h1><br><br><br>
 
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=LF_nq5RAY5Y" target="_blank" title="5분 뚝딱 철학">
+    새로운 귀납의 문제 (feat. 넬슨 굿맨, 스윈번)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=MmAZKV1ZnAM" target="_blank" title="5분 뚝딱 철학">
+    아인슈타인 : 쌍둥이 역설에 대한 4가지 해석</a><br>
+
+  <a href="https://www.youtube.com/watch?v=q1dUOrI8TfU" target="_blank" title="5분 뚝딱 철학">
+    칸트 : 순수이성비판 part 2</a><br>
 
   <a href="https://www.youtube.com/watch?v=uGww5e2CEJQ" target="_blank" title="5분 뚝딱 철학">
     결정론 : 미래는 이미 결정되어 있는가?</a><br>
@@ -1254,8 +1264,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
