--- a/The_economist.html
+++ b/The_economist.html
@@ -41,8 +41,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="active">The Economist</a></li>
   </ul>
@@ -51,11 +51,25 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.29]</h1><br><br><br>
+  <h1>The Economist[Lv.30]</h1><br><br><br>
 
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=NkM_XCtsjrc" target="_blank" title="자유잍튜브THE">
+    물만난 중국. 중국 양털깍기에 동참할텐가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Q0TWwI4Y6Gw" target="_blank" title="JD부자연구소">
+    주식시장은 상승세를 탔다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=8cdyfgIaj1w" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    미국대선 최악의 선택, 3일천하 바이든 효과는 끝났다?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=pdJz5y_5j-0" target="_blank" title="자유잍튜브THE">
+    돈 버는 방법이 코앞에 있는데, 이것도 안해? 그럴거면 주식 하지마!</a><br>
 
   <a href="https://www.youtube.com/watch?v=sVQYf0s49lE" target="_blank" title="자유잍튜브THE">
     추풍낙엽 한국 시장, 지금 시점 무엇을 보는게 좋을까?</a><br>
@@ -1015,8 +1029,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="active">The Economist</a></li>
   </ul>
