--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -43,8 +43,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
@@ -56,15 +56,145 @@
 
 
 
-  <h1>The War of Genesis[Lv.91]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.102]</h1><br><br><br>
 
 
 
 
+
+
+  <a>class101 자청 자동수익 강의 6-7</a><br>
+  <a>class101 자청 자동수익 강의 6-6</a><br>
+  <a>class101 자청 자동수익 강의 6-5</a><br>
+  <a>class101 자청 자동수익 강의 6-4</a><br>
+  <a>class101 자청 자동수익 강의 6-3</a><br>
+  <a>class101 자청 자동수익 강의 6-2</a><br>
+  <a>class101 자청 자동수익 강의 6-1</a><br>
+  <a>class101 자청 자동수익 강의 5-15</a><br>
+  <a>class101 자청 자동수익 강의 5-14</a><br>
+  <a>class101 자청 자동수익 강의 5-13</a><br>
+  <a>class101 자청 자동수익 강의 5-12</a><br>
+  <a>class101 자청 자동수익 강의 5-11</a><br>
+  <a>class101 자청 자동수익 강의 5-10</a><br>
+
+  <a>안드로이드 JAVA : 01. View - 02. 개요 (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 01. 개요 (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 5-9</a><br>
+  <a>class101 자청 자동수익 강의 5-8</a><br>
+  <a>class101 자청 자동수익 강의 5-7</a><br>
+  <a>class101 자청 자동수익 강의 5-6</a><br>
+  <a>class101 자청 자동수익 강의 5-5</a><br>
+  <a>class101 자청 자동수익 강의 5-4</a><br>
+  <a>class101 자청 자동수익 강의 5-3</a><br>
+  <a>class101 자청 자동수익 강의 5-2</a><br>
+  <a>class101 자청 자동수익 강의 5-1</a><br>
+  <a>class101 자청 자동수익 강의 4-6</a><br>
+  <a>class101 자청 자동수익 강의 4-5</a><br>
+  <a>class101 자청 자동수익 강의 4-4</a><br>
+  <a>class101 자청 자동수익 강의 4-3</a><br>
+  <a>class101 자청 자동수익 강의 4-2</a><br>
+  <a>class101 자청 자동수익 강의 4-1</a><br>
+  <a>class101 자청 자동수익 강의 3-6</a><br>
+  <a>class101 자청 자동수익 강의 3-5</a><br>
+  <a>class101 자청 자동수익 강의 3-4</a><br>
+  <a>class101 자청 자동수익 강의 3-3</a><br>
+  <a>class101 자청 자동수익 강의 3-2</a><br>
+  <a>class101 자청 자동수익 강의 3-1</a><br>
+  <a>class101 자청 자동수익 강의 2-6</a><br>
+  <a>class101 자청 자동수익 강의 2-5</a><br>
+  <a>class101 자청 자동수익 강의 2-4</a><br>
+  <a>class101 자청 자동수익 강의 2-3</a><br>
+  <a>class101 자청 자동수익 강의 2-2</a><br>
+  <a>class101 자청 자동수익 강의 2-1</a><br>
+  <a>class101 자청 자동수익 강의 1-7</a><br>
+  <a>class101 자청 자동수익 강의 1-6</a><br>
+  <a>class101 자청 자동수익 강의 1-5</a><br>
+  <a>class101 자청 자동수익 강의 1-4</a><br>
+  <a>class101 자청 자동수익 강의 1-3</a><br>
+  <a>class101 자청 자동수익 강의 1-2</a><br>
+  <a>class101 자청 자동수익 강의 1-1</a><br>
+  <a>class101 자청 자동수익 강의 인트로 3</a><br>
+  <a>class101 자청 자동수익 강의 인트로 2</a><br>
+  <a>class101 자청 자동수익 강의 인트로 1</a><br>
+
+  <a>class101 신사임당 스마트스토어 강의 12-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 12-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 12-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 12-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 12-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 11-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 11-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 11-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 11-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 10-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 10-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 10-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 10-2</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ED7u2ygEzrc" target="_blank" title="일헥타르TV">
+    하나라도 더 파는 진짜 방법｜마케팅 겨자씨</a><br>
+
+  <a>class101 신사임당 스마트스토어 강의 10-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 9-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 9-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 9-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 9-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 8-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 8-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 8-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 8-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 7-6</a><br>
+  <a>class101 신사임당 스마트스토어 강의 7-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 7-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 7-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 7-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 7-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 6-6</a><br>
+  <a>class101 신사임당 스마트스토어 강의 6-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 6-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 6-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 6-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 6-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-8</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-7</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-6</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 5-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 4-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 4-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 4-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 4-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 4-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 3-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 3-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 3-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 3-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 3-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 2-5</a><br>
+  <a>class101 신사임당 스마트스토어 강의 2-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 2-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 2-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 2-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 1-4</a><br>
+  <a>class101 신사임당 스마트스토어 강의 1-3</a><br>
+  <a>class101 신사임당 스마트스토어 강의 1-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 1-1</a><br>
+  <a>class101 신사임당 스마트스토어 강의 0-2</a><br>
+  <a>class101 신사임당 스마트스토어 강의 0-1</a><br>
+
+  <a href="https://www.youtube.com/watch?v=3W0UsssJPIc&t=1s" target="_blank" title="일헥타르TV">
+    프로그램없이 쇼핑키워드 찾는 방법｜스마트스토어 노하우</a><br>
+
+  <a href="https://www.youtube.com/watch?v=MQ3bf3xK8q4" target="_blank" title="일헥타르TV">
+    1위 카테고리 찾는 방법｜스마트스토어 노하우</a><br>
 
   <a href="https://www.youtube.com/watch?v=S230cNo7NXw" target="_blank" title="일헥타르TV">
-    알아서 트래픽 모아주는 블로그 포스팅 방법｜스마트스토어 노하우
-</a><br>
+    알아서 트래픽 모아주는 블로그 포스팅 방법｜스마트스토어 노하우</a><br>
+
 
   <h2>[올인원 패키지 : 안드로이드 앱 개발]</h2>
   <p>
@@ -1348,8 +1478,8 @@
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
