--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </ul>
     <ul class="column2" align="center" style="font-size: 25px; background-color:#3498DB; list-style: none; margin-top:0px; margin-bottom:0px;">
         <div>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Game_industry_trends.html" class="inactive" style="color:#3498DB">Game Trends</a></li>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="AI_industry_trends.html" class="inactive" style="color:#3498DB">AI Trends</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Game_and_reality.html" class="inactive" style="color:#3498DB">Game & Reality</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Ancient_spells.html" class="inactive" style="color:#3498DB">Ancient Spells</a></li>
           <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Science_and_technology.html" class="inactive" style="color:#3498DB">Science & Tech.</a></li>
           <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="The_economist.html" class="inactive" style="color:#3498DB">The Economist</a></li>
         </div>
