--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -58,7 +58,48 @@
 
 
 
+    <a></a>
+    [정리하는 뇌 118p] 뇌는 당신이 전념하는 모든 활동에 일관된 기준을 가지고 참여할 필요가 있다. 당신은 지금 자신이 하고 있는 일은 그래야 할 필요가 있어서 하는 일이고, 지금 하고 있지 않은 일은 하고 있지 않아도 괜찮은 일이라 하지 않고 있다는 확신을 가져야 한다. 찜찜한 생각이 남아있으면 마음이 맑아질 수 없다. 당신이 어떤 식으로든 마무리하지 못했다고 여기는 것이 있으면 마음 바깥의 신뢰할 만한 시스템에 담아내야 한다. 그 신뢰할 만한 시스템이 바로 글로 적는 것이다.
+    <br><br>
 
+    <a></a>
+    [정리하는 뇌 116-117p] 무언가 중요한 일, 특히 반드시 해야 할 일을 마음에 두고 있으면 그것을 잊어버릴까 봐 겁이 나서 뇌는 반복해서 그 내용을 되뇌기 시작한다. (중략)
+    해야 할 일을 머릿속에만 저장하고 있으면 나의일부는 그 일에 주의를 기울여야 한다는 생각을 멈추지 못하기 때문에 태생적으로 스트레스를 유발하는 비생산적인 상황이 만들어지고 만다.
+    글로 기록하면 무언가 잊어버리지 않을까 걱정하고 그것을 잊지 않으려고 애쓰는 데 들어가는 정신적 에너지를 아낄 수 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 74p] 정보 과부하의 시대에는 환경을 통제하고, 뇌의 작동방식에 대한 지식을 활용하는 것이 중요하다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 72p] 능동적 분류가 이런 것을 용이하게 만들어주는 데는 아주 심오하고도 단순한 이유가 있다. 우리가 일을 깜빡하거나 물건을 잃어버리지 않게 해주는 가장 중요한 원칙은 '정리'의 부담을 뇌가 아닌 외부 세계로 넘기는 것이다. 정리 과정의 일부 또는 전부를 뇌에서 물질세계로 떠넘길 수 있다면 그만큼 실수를 할 가능성이 줄어든다. 이것은 뇌의 용량에 한계가 있어서가 아니다. 뇌가 기억을 저장하고 검색하는 속성 때문이다. 기억 과정은 비슷한 항목들이 있으면 쉽게 산만해지고 혼란에 빠진다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 72p] 능동적 분류는 정신이 산만해지지 않도록 자신을 보호하는 강력한 방법으로, 효율성을 높여준다. 실용적인 효율성은 물론 지적 효율성도 함께 향상된다. 우선순위를 정한 다음에 일을 시작하면, 자기가 하는 일이 지금 이 순간에 당연히 하고 있어야 할 가장 중요한 과제임을 알기 때문에 깜짝 놀랄 정도로 강력한 능력을 발휘하게 된다. 다른 일들은 나중에 해도 된다는 것, 이것이야말로 지금의 일에 집중하게 해주는 핵심이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 70p] 성공하는 사람들은 유용한 지식과 쓸모없는 지식을 범주화 하는 데 전문가다. 이들은 어떻게 그렇게 할 수 있을까?
+    '대단히 성공한 사람들', 즉 HSP가 거르지 않고 매일매일 하는 한 가지 일이 있다. 발로 능동적 분류(active sorting)다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 70p] 지식에 대한 우리의 갈증은 실패의 근원이 될 수도 있고, 성공의 근원이 될 수도 있다. 이것은 우리의 정신을 산만하게 만들 수도 있고, 평생 학습과 이해를 추구하는 일에 몰두하게 만들 수도 있다. 어떤 학습은 우리 삶을 개선해주지만, 어떤 학습은 그저 우리의 정신을 산만하게 만들 뿐이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 69p] 우리는 세상에 구조를 부여하도록 만들어졌다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 69p] 인간은 지식을 즐기도록 만들어진 존재다. 특히 감각을 통해 들어오는 지식을 좋아한다. 우리는 이런 감각적 지식에 구조를 부여하고, 그것을 다른 각도에서 바라보며 다양한 신경 체계(neural framework)에 맞춰보려고 애쓰도록 만들어졌다. 이것이 학습의 본질이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 69p] 우리 뇌는 무언가 새로운 것을 알아내고, 그것을 질서 잡힌 구조 안으로 체계적으로 분류해넣을 때 기분 좋게 도파민이 뿜어져 나오도록 진화되었다.
+    <br><br>
 
     <a></a>
     [편집광만이 살아남는다] 성공은 만족을 낳고, 만족은 실패를 낳는다. 과거와 현재의 성공에 안주하는 순간, 미래의 생존 근거를 잃게 된다. 항상 긴장하는 편집광만이 살아남는다.
@@ -73,7 +114,7 @@
     <br><br>
 
     <a></a>
-    [침묵이라는 무기] 말을 현명하게 선택하면 적은 말로도 상대를 설득할 수 있다. 말이 많다는 것은 할 말이 많다는 증거가 아니라 게을러서 사고자 하는 말을 가장 잘 전달할 수 있는 효과적인 말을 찾지 못했다는 증거다.
+    [침묵이라는 무기] 말을 현명하게 선택하면 적은 말로도 상대를 설득할 수 있다. 말이 많다는 것은 할 말이 많다는 증거가 아니라 게을러서 하고자 하는 말을 가장 잘 전달할 수 있는 효과적인 말을 찾지 못했다는 증거다.
     <br><br>
 
     <a></a>
@@ -97,7 +138,7 @@
     <br><br>
 
     <a></a>
-    [거의 모든 IT의 역사] 회사에서 배움의 기회와 개인의 창조성을 최대한 발휘할 수 있게 지원할 뿐 아니라 최고록 재능 있는 사람들이 같이 일할 수 있도록 만들어 놓은 것, 이것이 픽사의 진짜 경쟁력인 것이다. 여기에 회사에서는 스톡옵션을 후하게 제공하고 있으니 세계 최고 애니메이션 인재들이 픽사로 몰려들었다.
+    [거의 모든 IT의 역사] 회사에서 배움의 기회와 개인의 창조성을 최대한 발휘할 수 있게 지원할 뿐 아니라 최고로 재능 있는 사람들이 같이 일할 수 있도록 만들어 놓은 것, 이것이 픽사의 진짜 경쟁력인 것이다. 여기에 회사에서는 스톡옵션을 후하게 제공하고 있으니 세계 최고 애니메이션 인재들이 픽사로 몰려들었다.
     이들에게 거액의 스카우트 제의가 들어오더라도 월급의 많고 적음에 관계없이 픽사를 떠나려는 사람은 거의 없었다. 그들에게는 돈보다 소중한 천국과도 같은 환경이 있었기 때문이었다.
     <br><br>
 
