--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -63,6 +63,12 @@
 
 
 
+
+  <a>class101 자청 자동수익 강의 7-1</a><br>
+
+  <a>안드로이드 JAVA : 01. View - 04. 크기 (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 03. 크기 (개념)</a><br>
+
   <a>class101 자청 자동수익 강의 6-7</a><br>
   <a>class101 자청 자동수익 강의 6-6</a><br>
   <a>class101 자청 자동수익 강의 6-5</a><br>
