--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,7 +49,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.2]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.3]</h1><br><br><br>
 
 
 
@@ -57,6 +57,21 @@
 
 
 
+    <a></a>
+    [정리하는 뇌 157p] 멀티태스킹 중에는 의사결정을 요구하는 것이 많다. 의사결정은 신경 자원을 대단히 많이 잡아먹는다. 작은 결정을 하는 데도 큰 결정을 할 때만큼이나 많은 에너지가 소비된다. 이때 우리가 제일 먼저 잃는 것 중 하나는 충동조절 능력이다. 이렇듯 충동조절 능력이 급속하게 고갈 상태로 빠져들기 때문에 사소한 결정을 많이 내리고 나면 정작 중요한 것에 대해 안 좋은 결정을 내릴 수도 있다. 사정이 이런데 멀티태스킹을 시도해 쓸데없이 정보처리의 부담을 더할 이유가 무엇인가?
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 157p] 과제 사이를 전환하는 것은 그 자체로도 대사 비용(metabolic cost)이 들어간다. 하나의 과제에서 다른 과제로 주의를 전환할 때 전전두엽피질과 선조체는 산소를 함유한 포도당을 태운다. 과제에 집중할 때 필요한 연료 역시 포도당이다. 멀티태스킹을 할 때처럼 신속하게 지속적으로 주의 전환을 하다 보면 뇌는 연료가 금방 바닥나버리기 때문에 우리는 금세 탈진하고 정신이 혼란스러워진다.말 그대로 뇌의 영양분을 소진해버리는 것이다. 이것은 인지 수행 능력과 신체 수행 능력 모두에 문제를 일으킨다. 특히나 반복적인 과제 전환은 불안을 야기한다. 불안은 뇌 속에 스트레스 호르몬인 코르티솔의 수치를 높이고, 이것은 결국 공격성과 충동적 행동으로 이어진다. 반면 과제에 집중하는 것은 전대상회와 선조체에 의해 통제된다. 일단 중앙관리자 모드로 들어가면 그 상태에 머무는 데는 멀티태스킹을 하는 것보다 에너지가 덜 들며, 실제로 뇌가 필요로 하는 포도당의 양도 감소한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 156p] 멀티태스킹의 기회가 생기는 것만으로도 인지 수행 능력에 좋지 않은 영향을 미친다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 154p] 우리는 자기가 멀티태스킹을 하고 있다고 생각하지만, 이것은 강력하고도 사악한 착각이다. MIT의 신경과학자이자 분할주의(divided attention)의 세계적 권위자인 얼 밀러(Earl Miller)는 우리 뇌가 멀티태스킹에는 별로 적합하지 않게 만들어져 있다고 말했다. 사람들은 자기가 멀티태스킹을 하고 있다고 생각하지만, 실제로는 한 과제에서 다른 과제로 아주 신속하게 전환하고 있을 뿐이라는 것이다. (중략) 역설적이게도 멀티태스킹은 우리를 명백히 비효율적으로 만든다.
+    <br><br>
 
     <a></a>
     [정리하는 뇌 118p] 뇌는 당신이 전념하는 모든 활동에 일관된 기준을 가지고 참여할 필요가 있다. 당신은 지금 자신이 하고 있는 일은 그래야 할 필요가 있어서 하는 일이고, 지금 하고 있지 않은 일은 하고 있지 않아도 괜찮은 일이라 하지 않고 있다는 확신을 가져야 한다. 찜찜한 생각이 남아있으면 마음이 맑아질 수 없다. 당신이 어떤 식으로든 마무리하지 못했다고 여기는 것이 있으면 마음 바깥의 신뢰할 만한 시스템에 담아내야 한다. 그 신뢰할 만한 시스템이 바로 글로 적는 것이다.
@@ -64,7 +79,7 @@
 
     <a></a>
     [정리하는 뇌 116-117p] 무언가 중요한 일, 특히 반드시 해야 할 일을 마음에 두고 있으면 그것을 잊어버릴까 봐 겁이 나서 뇌는 반복해서 그 내용을 되뇌기 시작한다. (중략)
-    해야 할 일을 머릿속에만 저장하고 있으면 나의일부는 그 일에 주의를 기울여야 한다는 생각을 멈추지 못하기 때문에 태생적으로 스트레스를 유발하는 비생산적인 상황이 만들어지고 만다.
+    해야 할 일을 머릿속에만 저장하고 있으면 나의 일부는 그 일에 주의를 기울여야 한다는 생각을 멈추지 못하기 때문에 태생적으로 스트레스를 유발하는 비생산적인 상황이 만들어지고 만다.
     글로 기록하면 무언가 잊어버리지 않을까 걱정하고 그것을 잊지 않으려고 애쓰는 데 들어가는 정신적 에너지를 아낄 수 있다.
     <br><br>
 
@@ -159,7 +174,7 @@
     <a></a>
     [이것은 사업을 위한 최소한의 지식이다] 내가 보기에 명함의 숫자와 인맥의 폭은 전혀 비례하지 않는다. 진정한 인맥이란 상대방의 배후에 존재하는 미지의 인물까지 포함하는 것이다.
     요컨대 100명의 사람들과 가식적인 관계를 맺는 게 아니라, 100명의 인맥을 지닌 한 사람과 깊고 확실한 관계를 구축하는 게 중요하다. 그렇게 하면  배후에 존재하는 100명의 사람들까지도 자신의 인맥으로 활용할 수 있다.
-    따라서 어설픈 모인에 참석하는 것보다, 예전부터 잘 알고 있는 친구나 지인들, 혹은 최근에 새롭게 알게 된  사람들과  같이, 이미 알고 있는 사람들을 자주 만나 친분을 쌓고 신뢰관계를 구축하는 것이 훨씬 더 효과적이다.
+    따라서 어설픈 모임에 참석하는 것보다, 예전부터 잘 알고 있는 친구나 지인들, 혹은 최근에 새롭게 알게 된  사람들과  같이, 이미 알고 있는 사람들을 자주 만나 친분을 쌓고 신뢰관계를 구축하는 것이 훨씬 더 효과적이다.
     <br><br>
 
     <a></a>
