--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,7 +56,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.102]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.104]</h1><br><br><br>
 
 
 
@@ -64,6 +64,17 @@
 
 
 
+
+
+  <a>안드로이드 JAVA : 01. View - 08. Relativelayout (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 07. Relativelayout (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-3</a><br>
+
+  <a>안드로이드 JAVA : 01. View - 06. Linearlayout (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 05. Linearlayout (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-2</a><br>
   <a>class101 자청 자동수익 강의 7-1</a><br>
 
   <a>안드로이드 JAVA : 01. View - 04. 크기 (실습)</a><br>
