--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -57,12 +57,17 @@
 
 
 
+
+    <a></a>
+    [정리하는 뇌 162p] 이메일을 보낼 때마다 우리는 무언가 성취한 느낌이 들고 우리의 뇌는 무언가 성취했다고 말해주는 보상 호르몬을 조금씩 얻는다. 트위터 피드와 페이스북 업데이트를 확인할 때마다 우리는 무언가 새로운 것과 만나고, 사회적으로 유대감이 강화된 느낌을 받고, 또 다시 보상 호르몬을 조금 얻는다. 하지만 기억하자. 이런 쾌락의 느낌을 만들어내는 것은 전전두엽피질에 있는 계획하고, 일정을 짜고, 고차원적인 사고를 하는 중추가 아니라 바보같이 새로운 것만 추구하며 변연계를 움직이는 뇌 영역이다. 이메일, 페이스북, 트위터를 거듭 확인하는 것은 분명 신경 중독이다.
+    <br><br>
+
     <a></a>
     [정리하는 뇌 157p] 멀티태스킹 중에는 의사결정을 요구하는 것이 많다. 의사결정은 신경 자원을 대단히 많이 잡아먹는다. 작은 결정을 하는 데도 큰 결정을 할 때만큼이나 많은 에너지가 소비된다. 이때 우리가 제일 먼저 잃는 것 중 하나는 충동조절 능력이다. 이렇듯 충동조절 능력이 급속하게 고갈 상태로 빠져들기 때문에 사소한 결정을 많이 내리고 나면 정작 중요한 것에 대해 안 좋은 결정을 내릴 수도 있다. 사정이 이런데 멀티태스킹을 시도해 쓸데없이 정보처리의 부담을 더할 이유가 무엇인가?
     <br><br>
 
     <a></a>
-    [정리하는 뇌 157p] 과제 사이를 전환하는 것은 그 자체로도 대사 비용(metabolic cost)이 들어간다. 하나의 과제에서 다른 과제로 주의를 전환할 때 전전두엽피질과 선조체는 산소를 함유한 포도당을 태운다. 과제에 집중할 때 필요한 연료 역시 포도당이다. 멀티태스킹을 할 때처럼 신속하게 지속적으로 주의 전환을 하다 보면 뇌는 연료가 금방 바닥나버리기 때문에 우리는 금세 탈진하고 정신이 혼란스러워진다.말 그대로 뇌의 영양분을 소진해버리는 것이다. 이것은 인지 수행 능력과 신체 수행 능력 모두에 문제를 일으킨다. 특히나 반복적인 과제 전환은 불안을 야기한다. 불안은 뇌 속에 스트레스 호르몬인 코르티솔의 수치를 높이고, 이것은 결국 공격성과 충동적 행동으로 이어진다. 반면 과제에 집중하는 것은 전대상회와 선조체에 의해 통제된다. 일단 중앙관리자 모드로 들어가면 그 상태에 머무는 데는 멀티태스킹을 하는 것보다 에너지가 덜 들며, 실제로 뇌가 필요로 하는 포도당의 양도 감소한다.
+    [정리하는 뇌 157p] 과제 사이를 전환하는 것은 그 자체로도 대사 비용(metabolic cost)이 들어간다. 하나의 과제에서 다른 과제로 주의를 전환할 때 전전두엽피질과 선조체는 산소를 함유한 포도당을 태운다. 과제에 집중할 때 필요한 연료 역시 포도당이다. 멀티태스킹을 할 때처럼 신속하게 지속적으로 주의 전환을 하다 보면 뇌는 연료가 금방 바닥나버리기 때문에 우리는 금세 탈진하고 정신이 혼란스러워진다. 말 그대로 뇌의 영양분을 소진해버리는 것이다. 이것은 인지 수행 능력과 신체 수행 능력 모두에 문제를 일으킨다. 특히나 반복적인 과제 전환은 불안을 야기한다. 불안은 뇌 속에 스트레스 호르몬인 코르티솔의 수치를 높이고, 이것은 결국 공격성과 충동적 행동으로 이어진다. 반면 과제에 집중하는 것은 전대상회와 선조체에 의해 통제된다. 일단 중앙관리자 모드로 들어가면 그 상태에 머무는 데는 멀티태스킹을 하는 것보다 에너지가 덜 들며, 실제로 뇌가 필요로 하는 포도당의 양도 감소한다.
     <br><br>
 
     <a></a>
