--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -65,6 +65,10 @@
 
 
 
+  <a>안드로이드 JAVA : 01. View - 10. FrameLayout (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 09. FrameLayout (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-4</a><br>
 
   <a>안드로이드 JAVA : 01. View - 08. Relativelayout (실습)</a><br>
   <a>안드로이드 JAVA : 01. View - 07. Relativelayout (개념)</a><br>
