--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -65,6 +65,12 @@
 
 
 
+
+  <a>안드로이드 JAVA : 01. View - 12. Scrollview (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 11. Scrollview (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-5</a><br>
+
   <a>안드로이드 JAVA : 01. View - 10. FrameLayout (실습)</a><br>
   <a>안드로이드 JAVA : 01. View - 09. FrameLayout (개념)</a><br>
 
