--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,7 +49,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.3]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.4]</h1><br><br><br>
 
 
 
@@ -57,6 +57,11 @@
 
 
 
+
+
+    <a></a>
+    [정리하는 뇌 171p] 여기서 일상의 활동을 기억하기 위한 두 가지 전략이 나온다. 하나는 우리가 하는 모든 일에서 새로움의 느낌을 회복하려고 노력하는 것이다. 물론 말이 쉽지 실천은 녹록치 않다. 하지만 우리가 선(禪) 같은 맑은 정신을 얻고 자기가 하는 일에 주의를 기울이며 미래와 과거에 대한 생각들을 내려놓을 수만 있다면, 매 순간이 특별해지기 때문에 매 순간을 기억하게 된다.
+    <br><br>
 
     <a></a>
     [정리하는 뇌 162p] 이메일을 보낼 때마다 우리는 무언가 성취한 느낌이 들고 우리의 뇌는 무언가 성취했다고 말해주는 보상 호르몬을 조금씩 얻는다. 트위터 피드와 페이스북 업데이트를 확인할 때마다 우리는 무언가 새로운 것과 만나고, 사회적으로 유대감이 강화된 느낌을 받고, 또 다시 보상 호르몬을 조금 얻는다. 하지만 기억하자. 이런 쾌락의 느낌을 만들어내는 것은 전전두엽피질에 있는 계획하고, 일정을 짜고, 고차원적인 사고를 하는 중추가 아니라 바보같이 새로운 것만 추구하며 변연계를 움직이는 뇌 영역이다. 이메일, 페이스북, 트위터를 거듭 확인하는 것은 분명 신경 중독이다.
