--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,7 +56,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.104]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.105]</h1><br><br><br>
 
 
 
@@ -64,7 +64,19 @@
 
 
 
+  <a>class101 자청 자동수익 강의 7-7</a><br>
 
+  <a>안드로이드 JAVA : 01. View - 06. Linearlayout (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 05. Linearlayout (개념)</a><br>
+  <a>안드로이드 JAVA : 01. View - 04. 크기 (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 03. 크기 (개념)</a><br>
+  <a>안드로이드 JAVA : 01. View - 02. 개요 (실습)</a><br>
+  <a>안드로이드 JAVA : 01. View - 01. 개요 (개념)</a><br>
+
+  <a>안드로이드 JAVA : 01. View - 14. 과제 풀이 (1)</a><br>
+  <a>안드로이드 JAVA : 01. View - 13. [과제] 과제 설명</a><br>
+
+  <a>class101 자청 자동수익 강의 7-6</a><br>
 
   <a>안드로이드 JAVA : 01. View - 12. Scrollview (실습)</a><br>
   <a>안드로이드 JAVA : 01. View - 11. Scrollview (개념)</a><br>
