--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,7 +49,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.4]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.10]</h1><br><br><br>
 
 
 
@@ -58,6 +58,249 @@
 
 
 
+
+    <a></a>
+    [정리하는 뇌 323p] 창조적이라는 말은 비선형이 선형을 침범해 들어가고, 그 결과물에 대해 통제력을 행사할 수 있도록 허락한다는 의미다. 과학과 예술에서 지난 수천년간 이뤄진 주요 성취는 연역이 아닌 귀납 과정을 필요로 했다. 알려진 것으로부터 알려지지 않은 것을 추정해야 했고, 때로는 다음에 올 것은 무엇인지 무엇이 옳은 것인지 어림짐작해야 할 때도 많았다. 한마디로 말해서 뛰어난 창의력에 곁들여 어느 정도 운이 필요했다. 어떻게 이런 진전이 이루어질 수 있을까 하는 미스터리도 존재하지만, 우리는 자기가 원하는 대로 삶을 꾸릴 수 있다. 우리는 시간을 정리하고 마음을 정리함으로써 창의력을 위한 시간, 마음이 몽상에 빠질 수 있는 시간, 우리 각자가 우리 시대에 자기만의 독특한 기여를 할 수 있는 시간을 남겨놓을 수 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 314p] 성공한 사람들이 시간관리를 위해 많이 하는 한 가지 일은 바로 자기의 시간이 주관적으로 자신에게 얼마나 가치가 있는지 계산해보는 것이다. 이렇게 계산하는 데 그 시간의 시장가치나 시급 등을 참고할 수는 있지만 반드시 이런 것들을 따져서 계산할 필요는 없다. 중요한 것은 스스로 자신의 시간이 얼마나 가치 있다고 느끼는가 하는 것이다. (중략) 자신의 시간이 자기에게 얼마나 가치 있는지 계산하고 나면 의사결정이 무척 간단해진다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 312p] 내부적 산만함과 싸울 때 당신이 할 수 있는 가장 효과적인 일은 3장에서 언급한 마음 깨끗이 정리하기를 실행하는 것이다. 어려운 과제는 50분 혹은 그 이상 집중력을 유지해야 효과적이다. 당신의 뇌가 집중한 상태에 안착해서 그 상태를 유지하는 데 드는 시간 때문이다. 가장 좋은 시간관리 기법은 당신의 주의를 끈 것들을 하나도 빠짐없이 모두 글로 적어두는 것이다. 이렇게 하는 것은 프로젝트나 상황에 대한 생각을 마음속에서 지우면서도 잠재적으로 유용할지 모를 아이디어들을 하나도 놓치지 않기 위한 것이다. 한마디로 전두엽의 외부화다. 그렇게 하면 당신은 한 발 뒤로 물러나 그 목록을 관찰자의 시점에서 바라볼 수 있고, 머릿속에서 뒤늦게 큰 목소리로 등장할 내용에 마음을 뺏기지 않을 수 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 311p] 외부적 산만함에는 앞에서 언급한 전략이 적용된다. 하루 중 특정 시간은 일하는 시간으로 정해서 휴대전화를 꺼두고, 이메일이나 인터넷 브라우저도 꺼두자. 당신이 일에 집중할 수 있게 해주는 특정 공간을 마련하자. 생산성이 높은 시간에 오는 연락에는 반응하지 않는다는 방침을 세우자. 당신이 지금 하고 있는 일이 당신이 할 수 있는 일 중에서 가장 중요한 일이라는 마음가짐을 갖자.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 311p] 산만해지게 만드는 것들을 무시하는 데 성공하려면 자신을 속이거나 손에 잡고 있는 일을 계속하게 북돋아줄 시스템을 만들어야 한다. 우리가 대처해야 할 산만함은 외부적 산만함(우리에게 손짓하는 세상의 것들에 의해 야기된다)과 내부적 산만함(우리 마음이 백일몽 모드로 흘러들어가서 생긴다) 두 종류로 나뉜다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 311p] 당신의 뇌에 있는 변화 중추와 새로움 중추는 아무리 사소한 것이라도 어떤 과제를 마무리하면 당신에게 화학적 보상을 준다. 페이스북, 트위터, 이메일, 문자 메시지 등등 소셜 네트워킹 활동을 하면 뇌의 쾌락 중추를 통해 화학물질이 방출되는데, 이것은 생리학적으로 정말 중독성이 강하다. 그러나 삶의 가장 큰 만족은 오랫동안 정신을 집중하고 에너지를 쏟아야 하는 프로젝트를 마무리했을 때 찾아온다. 나중에 자신의 삶을 되돌아보면서 자기는 일을 하는 동안에도 수천 건의 문자메시지를 보내고 소셜 네트워크 업데이트를 확인했노라며 만족스러워할 사람은 아무도 없을 것이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 310p] 효율적인 시간관리에서는 산만함 피하기가 가장 큰 부분을 차지한다. 자신이 욕망하는 것 때문에 방해받기 쉽다는 것은 삶의 역설이다. 물고기는 낚시꾼의 미끼에, 쥐는 치즈에 유혹당한다. 이런 욕망의 대상들은 적어도 생명 유지에 필요한 자양물이다. 인간이 이런 것을 욕망하다가 해를 입는 경우는 드물다. 우리 삶을 망가뜨리는 유혹은 대개 순수한 탐닉인 경우가 많다. 생존을 위해 도박을 하고, 술을 마시고, 강박적으로 소셜 네트워크 피드백을 확인하는 사람은 없다. 오락을 위해 시작한 활동이 통제력을 벗어났음을 깨닫는 일은 인생의 가장 큰 도전 과제 중 하나다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 308p] 창조적인 사람들은 몰입 상태가 발생할 가능성을 극대화하고, 일단 그 상태에 도달하고 나면 몰입 상태에 머물 수 있도록 생활을 구성하는 경우가 많다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 306p] 몰입 상태는 당신이 지금 하고 있는 일에 대해 명확하게 생각하지 않을 때 일어난다. 이 상태에서 당신의  뇌는 의식적인 통제를 발휘할 필요 없이 진행과 운영이 자동적으로 일어나는 특별 활동 모드에 들어가 있다. 이는 해당 과제에 대한 훈련과 전문성이 몰입 상태의 전제 조건인 이유이기도 하다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 306p] 몰입 상태가 정점에 도달하면 우리는 주변 환경에 대한 의식을 잃어버린다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 305p] 몰입 상태를 정의하는 것은 관여(engagement)다. 여기에는 대단히 높은 수준의 관여가 있어야 한다. 정보의 접근과 처리는 아무런 노력 없이도 이루어지는 것 같다. 자기에게 필요한 정보들은 바로 손끝에 있다. 심지어 너무 오래돼서 자기가 알고 있는지도 모르고 있던 정보들을 비롯해 까맣게 잊고 있었던 기술들까지 등장하기 시작한다. 이 경우 집중하기 위해 자제력을 발휘할 필요도 없기 때문에 당면 과제에 신경 자원을 자유롭게 사용할 수 있다. 여기가 바로 뇌에서 무언가 역설적인 것이 일어나는 지점이다. 몰입 상태에서는 더 이상 과제에 집중하기 위해 노력할 필요가 없다. 이런 특별한 주의 상태에 접어들고 나면 과제 집중은 저절로 일어난다. 정신이 산만해지는 것보다 몰입 상태, 창조적 관여의 정점에 머무는 것이 오히려 에너지가 덜 든다. 몰입 상태에서 생산성과 효율성이 커지는 이유다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 304-305p] 기술 수준이 낮으면 도전의 입구가 좁다. 반면 기술 수준이 높으면 몰입 상태를 달성할 가능성이 그만큼 넓어진다. 몰입 상태의 특징은 의식적 자각이 완전히 사라지는 것인데, 기술 수준이 높을수록 이런 기술을 무의식적으로, 자동적으로 실행하기가 쉬워지기 때문이다. 그럼 당신의 의식, 자아, 그리고 몰입을 방해하는 다른 적들을 그만큼 쉽게 떼어낼 수 있다. 몰입 상태는 전문가나 어느 한 분야에서 많은 시간을 투자해 수련한 사람들에게 좀 더 자주 나타난다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 304p] 몰입 상태가 아무 과제나 활동에서 다 일어나는 것은 아니다. 과제에 깊이 집중해야 하고, 그 과제가 강렬한 집중과 전념을 요구해야 하며, 명확한 목표가 담겨 있어야 하고, 즉각적인 피드백이 제공돼야 한다. 그리고 과제의 수준이 행위 주체의 능력 및 기술 수준과 완전히 맞아떨어져야 한다. 당신이 수행하는 과제가 너무 간단해서 도전적인 면이 전혀 없다면 당신은 쉽게 지겨워질 것이다. 지겨움은 과제에 대한 주의 집중을 깨뜨릴 것이고 당신의 마음은 기본 모드로 들어가 몽상을 시작할  것이다. 반대로 과제가 너무 어렵고 지나치게  도전적이면 낙담하면서 불안해할 것이다. 낙담과 불안 역시 주의 집중을 깨뜨린다. 몰입 상태에 도달할 가능성이 열리는 것은 도전 과제가 당신에게 딱 적당할 때, 당신이 가지고 있는 특정 기술 수준과 일치할 때다. 이런 상태라고 해서 반드시 몰입 상태가 일어난다고 장담할 수는 없지만, 이런 조건이 충족되지 않고 도전 과제가 당신에게 딱 맞지 않다면 몰입은 결코 일어나지 않는다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 303p] 몰입 상태에서 주의가 제한된 지각 영역(perceptual field)에 집중되면, 당신은 그 부분에 모든 주의력을 투자한다. 행위와 의식이 하나로 합쳐진다. 자신의 행위와 지각을 별개라 생각하지 않게 되며, 당신의 생각이 곧 행동이 된다. 여기에는 심리학적 측면도 존재한다. 몰입 상태에서 당신은 실패에 대한 두려움으로부터의 자유를 경험한다. 당신이 무엇을 해야 하는지 인식하고 있지만 자기가 그것을 하고 있다는 느낌은 들지 않는다.  자아는 여기에 관여하지 않으며 완전히 사라져버린다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 302p] 몰입 상태에서는 두 가지 핵심 뇌 영역이 불활성화된다. 자기비판을 담당하는 전전두엽피질 부위와 뇌의 두려움 중추인 편도체다. 창조적인 예술가가 두려움이 사라지고 마치 예전에는 감수해보지 않았던 창조적인 위험을 감수하는 기분이 들 때가 많은 것도 바로 이 때문이다. 그렇게 하지 못하게 방해했을 뇌의 두 영역의 활성이 크게 감소하는 것이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 300p] 창의력을 발휘하려면, 시간이 멈추는 백일몽 모드와 시간을 감시하는 중앙관리자 모드를 통합하는 요령이 필요하다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 299p] 자신감은 유전적 기반을 가지고 있으며, 인생 전방에 걸쳐 비교적 고정된 모습을 보여주지만, 다른 특성들과 마찬가지로 상황이 달라지면 개인에게서 다른 반응이 촉발될 수도 있다. 환경적 요소 때문에 자신감이 더  쌓일 수도 있고, 꺾일 수도 있다. 자신감을 키우는 한 가지  효과적인 방법은 자신 있는 척하는 것이다. 자신감이 결여된 사람이라도 포기하지 않고, 어려워 보이는 과제에 열심히 도전하고, 일시적인 차질을 정상으로 되돌리기 위해 노력하는 등 자신감으로 가득 찬 것처럼 행동할 수 있다는 의미다. 이것은 긍정적인 피드백 고리를 형성하기 때문에 추가적인 노력을 통해 실제로 성공으로 이어질 수 있으며, 유능감과 행위의 주체성을 구축하는 데도 도움이 된다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 298p] 자신의 가치를 과제의 성과와 분리하는 것 역시 중요하다. 자신감이란 일찍 실패를 경험할 수도 있고, 그것도 다 과정의 일부이니 괜찮다는 사실을 받아들이는 것이다. 박학한 작가 조지 플림톤은 성공한 사람들은 역설적으로 우리가 대부분 실패자라 생각하는 사람들보다 오히려 더 많은 실패를 경험한다고 지적했다. 성공한 사람들은 실패와 차질을 다른 사람들과는 아주 다른 방식으로 대한다고 ㅍ표현하면 이해하기 쉬울 것이다. 성공하지 못한 사람들은 실퍃하거나 차질이 생기면 윽것으로 자신의 경력이 끝장났다고 생각하고 이렇게 결론 내린다. "이것은 나하고 안 맞아." 반면 성공한 사람은 차질이 생길 때마다 그것을 목표를 완수하는 데 없어서는 안 될 지식을 얻게 되는 기회라 여긴다. 성공한 사람의 내면의 대화는 이런 식으로 흘러간다. '목표를 달성하는 데 필요한 것은 모두 다 알고 있다고 생각했는데, 이번 경험으로 그렇지 않다는 것을 알게 됐어. 이것을 알게 되었으니 이제 다시 시작할 수 있어.' 성공한 사람들은 앞길이 험하리라 예상할 줄 알고, 그런 험한 길이 순조로운 여정을 방해하더라도 포기하지 않는다. 그 모든 것을 과정의 일부라 생각하기 때문이다. 스틸의 말처럼 이들은 삶은 편안해야 한다는 잘못된 믿음에 굴복하지 않는다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 297p] 감독을 맡은 사람은 그 역할 때문에 감독을 받는 사람보다 더 똑똑하고 능력 있어 보일 수밖에 없다. 감독자는 자기 일이 깔끔하게 마무리되었을 때 부하직원에게 보여줄 수 있는 선택권이 있다. 하지만 부하직원은 자기에게 유리하게 자신을 표현할 기회가 없고, 초기 단계나 중간 단계에서 일의 진척을 보여달라는 요구를 받는다. 이 상태로는 직원의 성과가 상사의 기대에 부합하기 어렵고, 그 결과 자신의 능력이 부족하다는 느낌을 받게 된다. 하지만 이런 상황에 따른 제약은 능력을 말해주는 요소가 아니다. 이런 인지적 착각을 이해하면 자신을 덜 비판하도록 북돋아줄 수 있고, 목을 조르는 듯한 완벽주의로부터 자신을 해방시킬 수도 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 295p] 실망에 대한 낮은 내성은 신경적인 기반을 갖고 있다. 변연계 및 즉각적인 보상을 추구하는 뇌 영역은 전전두엽피질과 갈등을 빚는다. 전전두엽은 뒤처졌을 때 일어날 결과를 너무나 잘 알고 있다. 양쪽 영역 모두 도파민을 바탕으로 움직이지만, 그 각각에 미치는 도파민의 작용이 서로 다르다. 전전두엽피질에서 도파민은 우리를 집중시키고, 과제에 머물게 하지만, 변연계에서 도파민은 뇌의 자체적인 내인성 아편물질과 함께 작용해 쾌락을 느끼게 한다. 즉각적인 쾌락에 대한 욕구가 만족 지연 능력을 이길 때마다 우리는 일을 뒤로 미룬다. 어느 쪽이 이기느냐는 어느 도파민 시스템이 장악하고 있느냐에 달려 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 279p] 기억에서 가장 중요한 원리는 우리가 가장 신경 쓰는 것을 가장 잘 기억하는 경향이 있다는 점이 아닐까 싶다. 정서적으로 중요한 경험에는 생물학적 수준에서 신경화학적 꼬리표가 만들어져 부착된다. 그리고 우리의 꿈은 이런 경험을 붙들고 있는 것으로 보인다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 275p] 새로 얻은 기억은 처음에는 불안정하기 때문에 간섭에 저항성이 생기려면 신경 강화 혹은 응고가 필요하다. 그래야 나중에 검색을 통한 접근이 가능하다. 기억이 접근 가능하다는 것은 서로 다른 다양한 신호를 이용해 그 내용을 검색할 수 있다는 의미다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 274p] 더욱 깊은 수준에서 처리되는 항목, 우리가 더욱 적극적으로 참여하는 항목은 기억에 더욱 강력하게 부호화되는 경향이 있다. 새로운 학습 자료를 배울 때 책이나 강의를 통해 수동적으로 배우기보다는 스스로 알아내는 것이 더 효과적인 것도 바로 이 때문이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 270p] 덩어리로 나누는 것은 우리 삶에서 중요한 두 가지 기능을 지지해준다. 첫째, 명확하게 구별되는 과제를 줌으로써 대규모 프로젝트를 실행 가능하게 만들어준다. 둘째, 분명하게 정의된 시작과 끝으로 프로젝트를 분할해주기 때문에 인생의 경험을 기억하기 쉽게 해준다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 267p] 목표에 효율적으로 도달하려면 목표를 완수하는 것과 관련 깊은 과제의 특성에만 선별적으로 초점을 맞추고, 기타 다른 특성이나 주의를 끌기 위해 경쟁적으로 달려드는 환경적 자극은 무시할 수 있어야 한다. 그런데 어떤 요소가 목표 완수와 관련 있고, 어떤 요소가 그렇지 않은지는 어떻게 알까? 여기가 바로 전문성이 무대에 등장하는 시점이다. 사실 전문가와 초보자를 나누는 기준은 무엇에 주의를 기울이고, 무엇을 무시해야 하는지 아는 것이라 말할 수 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 265-266p] 자기가 만든 동기 체계를 신뢰하지 못하는 뇌의 편향을 극복하려면 엄청난 절제력이 필요하다. 왜 그럴까? 기본적 귀인 오류에서와 마찬가지로, 우리는 타임의 마음속은 들여다보지 못하고 자기 것만 볼 수 있기 때문이다. 우리는 어떤 결론에 도달할 때까지 결정을 내리는 과정에서 겪었던 초조함과 망설임, 그리고 그 모든 미묘한 부분들을 고통스러울 정도로 속속들이 인식하고 있다. 하지만 다른 사람의 마음속에서 일어난 과정에는 접근하지 못한다. 그래서 우리는 자신의 결정보다는 그들이 보여주는 확실성에 끌리는 경우가 많다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 265p] 일이 마무리될 때까지는 집중해서 하나의 주의 세트만 유지하자. 정신 자원을 효율적으로 정리한다는 것은 장기간 하나의 주의 세트를 유지할 수 있는 틈을 마련하는 것을 의미한다. 이렇게 하면 더 많은 일을 하고도 에너지가 넘칠 수 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 264p] 상사에서 일꾼으로, 그리고 꼼꼼한 일꾼으로 갔다가 다시 되돌아오기까지 이 모든 수준에서 일어나는 전환은 주의 세트의 전환이며, 여기에는 멀티태스킹의 대사 비용이 따른다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 263p] 일의 계획과 실행은 뇌의 서로 다른 부분을 이용한다. 상사와 부하직원 역할을 모두 다 해내려면 계층구조로 조직된 다중의 주의 세트를 형성하고 유지하면서, 그 사이를 앞뒤로 뛰어다녀야 한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 262-263p] 일을 진행하는 것과 그 진행 상황을 추적 관찰하는 것 사이의 균형이 필요하다. 이것은 여러 단계로 구성된 프로젝트에서는 필수적인 부분이다. 각각의 단계를 진행하려면 우리는 때때로 일을 멈추고 그것을 객관적으로 살펴서 일을 제대로 하고 있는지 확인하고 지금까지의 결과에 즐거워할 필요가 있다. 우리는 머릿속에서 한 걸음 뒤로 물러나 자기가한 일을 점검하고무언가 새로 할 필요가 있는지, 아니면 앞으로 계속 나아가도 되는지 생각한다. (중략) 일을 하고, 그 일을 점검하고, 조정하고, 다시 앞으로 나아간다. 실제 세상에 있는 것과 당신의 머릿속에 있는 것에 대한 비교를 조정하는 것은 전전두엽피질이다. (중략) 창조적인 일이든, 일상적인 일이든 우리는 일과 평가 사이를 계속 왔다 갔다하면서 머릿속에 있는 이상적인 이미지와 눈앞에서 진행되는 일을 비교한다. 이렇게 끊임없이 앞뒤로 왔다 갔다 하는 일은 우리 뇌가 하는 일 중 대사 소비가 가장 많은 것 중 하나다. 우리는 시간, 그리고 순간으로부터 한 발 물러나 전체적인 큰 그림을 바라본다. 눈에 보이는 것이 마음에 들면 다시 과제로 돌아와 앞으로 나아가고, 마음에 들지 않으면 개념적 실수나 물리적 실수를 수정하기 위해 뒤로 되짚어간다. 이렇게 주의와 관점을 전환하는 일은 무척 힘들다. 그리고 멀티태스킹과 마찬가지로 한 가지 일에 몰두할 때 보다 뇌가 영양분을 많이 사용한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 262p] 마무리하고 싶은 대규모 과제가 있을 때는 그것을 의미 있고, 시행 가능한 덩어리들로 쪼개자. 그렇게 하면 시간관리가 훨씬 쉬워진다. 시간관리만 잘 하면 한 덩어리를 마무리할 수 있다. 그리고 각 단계를 마무리할 때마다 신경화학적인 만족이 뒤따른다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 258p] 개인마다 인지 스타일에 차이가 있기 때문에 멀티태스킹에 존재하는 균형은 결국 집중력이냐, 창의력이냐의 문제로 귀결될 때가 많다. 누군가 집중하고 있다고 말하면, 그것은 보통 그 사람이 내적이든외적이든 지금 당장 눈앞에 있는 것에 주의를 기울이고 정신이 산만해진느 것을 피하고 있음을 의미한다. 반면 창의력이 있다는 것은 종종 별개의 것들을 연계하는 능력이 있음을 의미한다. 비유, 은유를 통해 새로운 아이디어를 탐험하거나, 서로 이어져 있음을 미처 깨닫지 못하고 있던 것을 하나로 엮으려고 노력할 때 우리는 그것을 창의적 발견이라 생각한다. 이런 발견을 하려면 집중과 더욱 폭넓은 시야 사이의 정교한 균형이 필요하다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 257p] 상황을 더욱 복잡하게 만드는 것이 있다. 뇌의 각성 시스템은 새로움 편향이 있다는 사실이다. 즉, 무언가 새로운 것이 나타나면 뇌의 주의는 거기에 쉽게 장악당하고 만다. 새로움 편향은 우리에게 가장 깊숙이 내재된 일부 생존욕구보다 강력하다. 인간은 새로운 경험을 할 수만 있다면 먹을 것이나 짝을 구할 때만큼이나 열심히 일한다. 서로 경쟁하는 여러 활동 중에서 어느 한 가지에 집중하려고 애쓰는 사람들이 겪는 어려움은 분명하다. 한 과제에 집중하기 위해 필요로 하는 바로 그 뇌 영역이 반짝이는 새로운 것이 나타나면 쉽게 정신을 뺏기고 만다는 점이다. 멀티태스킹을 하면 우리는 알지 못하는 사이에 중독의 고리로 빠져든다. 뇌의 새로움 중추가 반짝이는 새로운 자극을 처리하는 과정에서 보상을 받기 때문이다. 그리고 이것은 한 과제에 집중해서 지속적인 노력과 주의를 기울인 데 따르는 보상을 얻기를 원하는 전전두엽피질에 해롭게 작용한다. 우리는 장기적 보상을 추구하고 단기적 보상은 포기하도록 자신을 훈련시킬 필요가 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 257p] 멀티태스킹은 그 정의상 문제해결이나 창의력을 위해 반드시 필요한 '지속적 생각'을 붕괴시켜버리는데, 바로 이러한 점이 가장 큰 문제가 될 수 있다. 캘리포니아대학 언바인캠퍼스 정보학 교수인 글로리아 마크는 멀티태스킹이 혁신에 좋지 않다고 지적했다. "한 프로젝트를 수행할 때 10분 30초는 무언가에 대해 깊이 생각하기에 충분한 시간이 못된다." 창조적인 해결책은 완전히 몰두하는 집중과 백일몽 사이에서 일련의 논쟁이 일어나도록 내버려두었을 때 떠오르는 경우가 많다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 256p] 뇌는 세상을 한 번에 작은 조각과 덩어리들로 흡수한다. (중략) 당신은 주변에서 일어나는 일에 대한 자료가 끊이지 않고 매끈하게 이어져 들어온다고 생각할지 모르지만, 사실 당신의 뇌는 자기가 중요하다고 생각하는 것, 당신이 주의를 기울여야 하는 것만 까다롭게 골라 그것에 대해 예상한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 253p] 알코올은 도파민 수용체를 방해하고 NMDA 수용체라고 불리는 특별한 종류의 뉴런을 차단하는데, 이는 전두엽 손상 환자에게서 보이는 손상을 흉내 내는 방식으로 전전두엽피질 뉴런들의 상호소통 능력을 저해하는 것이다. 과음하는 사람 역시 전두엽 시스템의 이중고를 경험한다. 이들은 충동조절 능력이나 운동조정 능력, 혹은 안전하게 운전하는 능력 등을 잃어버릴 수 있지만, 그 사실을 인식하지 못하거나, 그냥 무시해버린다. 그래서 물불을 안 가리고 행동하게 되는 것이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 252p] 억제 능력에 문제가 생긴다면 현재 자신의 행동이 미래에 가져올 결과를 내다보는 데 장애가 생긴다. 그리고 지금 당장 무언가를 했다가 나중에 후회한다거나, 지금 진행 중인 프로젝트를 제대로 마무리하기 어려워진다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 236p] 일단 고정관념이 자리 잡으면 우리는 그것을 더 이상 재평가하지 않는 경향이 있다. 우리는 이 고정관념의 부당함을 보여주는 새로운 증거가 나타나도 그냥 '예외'로 치부해버린다. 이것이 바로 믿음 보존 편향이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 235p] 우리가 모든 부류의 사람이나 사물을 일반화하는 이유는 뇌가 하나의 거대한 추론 기계이고, 뇌는 우리의 생존을 확보하려는 과정에서 자기가 가진 자료는 무엇이든 이용하려 들기 때문이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 232p] 내집단·외집단 편향(in-group/out-group bias): 우리는 어떤 집단이 되었든 자기 집단에 소속된 사람들은 하나하나의 개인으로 생각하는 반면, 외집단에 속한 사람들은 차별화가 덜 된 하나의 덩어리로 보는 경향이 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 231p] 우리의 뇌는 귀인 오류를 범하는 선천적 기질이 있고, 험담을 즐기는 것 뿐만 아니라 외부인에 대한 선천적인 의심을 가지고 있다. 여기서 말하는 외부인에는 우리와 다른 모든 사람이 해당된다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 230p] 사람들은 자신이 경험하는 생리적 상태와 일관성 있는 믿음을 만들어내기 위해 상당한 인지적 노력을 기울인다. 일단 그걿게 한 다음에는 이 과정의 결과가 비교적 오래 지속되어 변화에 저항한다. 하지만 이것은 모르는 사이에 진행되는 판단의 오류다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 228p] 잘못된 것인 줄 몰랐던 애초의 지식은 잘못된 것을 알고 난 후에도 오래도록 판단에 영향을 미친다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 227p] 결과 편향 기반의 추론(outcome-bias-based inference): 대부분의 경우, 결과는 예측에 도움이 되고, 우리가 판단을 내릴 때 추론을 시작하는 간단한 신호로 자공하기 때문이다. 이런 원시적인 무의식적 신호에 의지하면 대개 노력과 인지 과부하는 훨씬 줄이면서 꽤 정확한 판단을 내릴 수 있기 때문에 효율적이다. 정보 과부하의 시대에는 결과에 기반한 편향이 시간을 줄여주기도 하지만 그것 때문에 오류가 발생할 수도 있는 만큼, 그 점을 인식하고 있어야 한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 226p] 우리는 기본적 귀인 오류의 인지적 착각에 늘 무릎을 꿇고 만다. 그런 오류가 존재함을 아는 것은 그것을 극복하는 데 도움이 된다. (중략) 기본적 귀인 오류는 정보 과부하 때문에 빚어진다. 특히나 인지 과부하를 크게 경험할수록 개인의 행동을 야기한 원인을 파악할 때 오류를 범할 가능성이 커진다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 214p] 1. 양(quantity): 당신이 대화에 기여하는 부분에 필요한 만큼의 정보를 담아라. 필요 이상 많은 정보를 담지 마라.
+    2. 질(quality): 당신이 거짓이라 믿는 것을 말하지 마라. 충분한 증거가 없는 말을 입에 담지 마라.
+    3. 태도(manner): 모호한 표현을 삼가라(듣는 사람이 모르는 단어를 사용하지 마라). 두 가지로 해석될 수 있는 말을 삼가라. 간단하게 말하라(불필요하게 장황해지지 않아야 한다). 질서정연하게 말하라.
+    4. 관련성(relation): 관련 있는 말을 하라.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 207p] 일상적으로 상호작용이 이뤄지는 과정에서도 사람들은 거짓말을 한다. 왜 그럴까? 한 가지 이유는 하지 말았어야 할 일을 했을 때 앙갚음 당할 두려움 때문이다. 그리 좋은 것은 아니지만 처벌을 피하기 위해 거짓말을 하는 것은 인간의 본성이다. (중략) 하지만 용서 또한 인간의 본성이다. 특히나 타당한 이유가 있을 경우 우리는 기꺼이 용서한다. (중략) 물론 사람들은 앙갚음에 대한 두려움만이 아니라다른 이유로도 거짓말을 한다. 다른 사람의 감정을 상하지 않게 하려는 것도 여기에 포함된다. 때로는 하얀 거짓말이 감정이 폭발하는 것을 막고 적대감을 최소화하는 사회적 접착제가 되어줄 때도 있다. 우리는 이런 맥락에서는 사람들의 거짓말을 놀라울 정도로 잘 알아맞힌다. 그리고 우리는 알면서도 매일 이런 거짓말에 속아준다. 이것은 사람들과의 대립을 피하면서 무언가를 조심스럽게 부탁하는 방식, 즉 간접화행(indirect speech act)과 관련 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 203p] 인지 과부하와 결정 과부하로 인해 사람들이 나태하고 무분별한 결정을 내리게 될 수도 있다. 행동경제학을 통해 알려진 바와 같이 소비자들은 여러 가지 대안을 평가할 때 관심 있는 변수를 동시에 두세 가지 이상 파악할 수 없다. 이는 자동차, 가정기기, 집, 심지어 잠재적 배우자와 관련된 결정에서도 마찬가지다. 이는 작업기억의 용량 한계와 직접 관련되어 있다. 그리고 주의 네트워크의 한계와도 관련되어 있다. 여러 대안 중 누구를 선택해서 데이트할 것인지 고려할 때, 우리는 필연적으로 세부사항들을 모두 파악하는 역할을 하는 중앙관리자 모드와 우리가 이 각각의 매력적인 대안과 함께할 경우의 모습을 상상하는 역할을 하는 백일몽 모드 사이를 오간다. (중략) 그런데 계산을 담당하는 중앙관리자 모드와 몽상에 빠지는 백일몽 모드 사이를 빠르게 왕복하다 보면 신경 자원이 소진되어 형편없는 의사결정으로 이어질 수 있다. 인지 자원이 모자라면 우리는 관련 정보에 집중하고 관련 없는 정보는 무시하는 데 어려움을 겪는다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 202p] 우리 중에는 인터넷 덕분에 사람을 많이 사귀고 인간관계도 더 많이 유지하는 사람들이 있다. 반면 다른 사람들, 특히 애초에 내성적이면서 인터넷에 파묻혀 사는 사람들 중에는 오히려 인터넷 때문에 사회활동이 줄어들고, 더 외로워지고, 우울증도 더 잘 걸리게 된 사람도 있다. 일련의 연구들은 대학생들의 공감 능력이 현저하게 떨어진 것을 보여준다. 이들은 남의 입장이 되어본다든가, 타인의 감정을 이해하려 애쓰는 것이 가치 있는 일이라 생각하는 경우가 과거 대학생들에 비해 훨씬 줄어들었다 이들이 문학소설을 덜 읽어서 그런 것이 아니다. 자기가 사람들과 교류한다고 착각하며 혼자 보내는 시간이 많아지고 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 199p] 인간이 다른 사람들과 어울리는 데 있어서 가장 중요한 성격은 바로 상냥함이다. 과학 문헌을 보면 상냥하다는 것은 협조적이고, 친화적이고, 남을 배려하고, 잘 돕는 것을 가리킨다. 이런 성격은 평생에 걸쳐 대략 안정적으로 나타나며 아동기 초기부터 드러난다. 상냥한 사람은 분노나 실망 같은 바람직하지 않은 감정을 조절할 수 있다. 이런 조절은 전두엽에서 일어난다. 전두엽은 충동을 통제하고 부정적인 감ㅈ정을 조절하게 도와주는 부위로, 관리자 주의 모드를 지배하는 바로 그 뇌 영역이다. 부상, 뇌졸중, 알츠하이머, 뇌종양 등으로 전두엽이 손상되면 충동조절 능력 및 정서적 안정성과 함께 상냥함이 제일 먼저 사라지는 경우가 많다. 감정조절 중 일부는 학습 가능하다. 어릴 때 충동조절과 분노조절에 대한 정적 강화(positive reinforcement)를 학습한 아이는 커서 상냥한 어른이 된다. 여러분도 짐작하겠지만, 상냥한 사람이 된다는 것은 긍정적인 사회관계를 유지하는 데 엄청난 이점으로 작용한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 199p] 친밀함의 정의가 달라진 결과, 오늘날 우리는 낭만적인 파트너에게 원하는 것이 그 어느 때보다 많아졌다. 곁에 머물면서 정서적인 지지와 친밀감, 경제적 지원 등을 해주기 바라고, 때에 따라서 친구, 간호사, 조언자, 비서, 회계 담당자, 부모, 보호자, 치어리더, 안마사 역할을 해주기 바란다. 그리고 그 과정에서 섹시한 매력을 잃지 않으며 자신의 성적 요구와 선호도에 맞춰 주기를 기대한다. 또한 자기 삶의 잠재력을 최고로 끌어올릴 수 있도록 배우자가 도와주기를 기대한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 197-198p] 연인은 함께 있는 것에서 그치지 않고 그 이상의 친밀함을 추구한다. 이 친밀함은 사적인 행동, 개인적 생각, 기쁨, 상처, 그리고 상처받는 것에 대한 두려움 등을 공유하고 거기에 접근할 수 있도록 허용하는 것이라 정의할 수 있다. 친말함에는 서로 공유하는 의미를 만들어내는 것 또한 포함된다. 둘만이 이해할 수 있는 농담, 둘만이 이해할 수 있는 곁눈질 등 일종의 텔레파시라고도 할 수 있다. 여기에는 관계 속에서 온전한 자기 자신이 될 수 있고, 또 상대방도 그렇게 될 수 있도록 해주는 자유도 포함된다. 친밀감은 중요한 것을 터놓고 얘기하게 해주고, 감정적으로 격한 주제에 관해서도 조롱받거나 거부당하리라는 두려움 없이 분명하게 자기 입장을 취할 수 있게 해준다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 197p] 어쩌면 이 모든 것에 환상이 스며들어 있는지도 모른다. 소셜 네트워크는 넓이를 제공해주지만 깊이를 제공하는 경우는 드물다. 우리가 갈망하는 것은 직접적인 접촉이다. 온라인 접촉이 어느 정도 그 갈망을 해소해주는 것 같기는 하지만 한계가 있다. 온라인 상호작용은 직접적인 접촉을 대신하기 보다는 보조적인 역할로 남을 때가 가장 좋다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 195p] 사회적 네트워크를 갖는 것은 깊은 생물학적 필요를 충족시켜줄 뿐만 아니라, 다른 사람들과의 관계에서 자신의 위치를 파악하고, 자신의 사회적 지위를 관찰하는 데 도움을 주는 앞쪽 전전두엽피질(anterior prefrontal cortex)의 뇌 영역들을 활성화시킨다. 이것은 또한 편도체를 비롯해서 뇌의 변연계에 있는 감정 중추들을 활성화시키고, 감정을 조절하는 것도 도와준다. 쉽게 말해, 어딘가에 소속되어 있으면 위안이 된다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 195p] 사회적 고립은 흡연보다 훨씬 더 심각한 심장마비와 사망의 위험 요인이기도 하다. 혼자 있는 것이 좋다고 생각하는 사람이 많지만, 우리가 자신이 원하는 것이 무엇인지 언제나 잘 알고 있는 것은 아니다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 187p] 전문가들은 이렇게 주장한다. "대중은 언제나 옳다." 하지만 이것은 분명 사실이 아니다. 대중 가운데 일부는 독단적이고 고집이 센 데다 틀린 정보를 가지고 있을 수도 있기 때문이다. (중략) 문제는 한쪽은 옳고 다른 한쪽은 틀렸는데 그것을 모를 때 생긴다. (중략) 문제는 똑똑한 사람들이 없다는 것이 아니라 정말 어리석은 사람들이 힘을 과시하는 것을 통제하기 어렵다는 것이다. 현대의 사회적 네트워크는 음울하고 낡은 사회적 역기능과 경이로울 정도로 새로운 기회로 복잡하게 얽혀 있다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 186-187p] 부정행위를 하는 것은 인간의 본성이기 때문에 크라우드소싱을 이용하려는 사람은 견제와 균형에 신경 써야 한다. (중략) 위키피디아의 경우,  해당 자료에 기여하고 그 내용을 검토하는 사람의 숫자가 엄청나다는 점이 그런 균형과 견제를 담당한다. 여기서 밑바탕에 딸린 가정은, 어느 주어진 집단 안에는 사소한 경우든, 극단적인 경우든 간에 거짓말쟁이나 부정행위자는 소수에 불과하며 결국은 선량한 사람들이 악한 사람들을 물리치리라는 것이다. 불행하게도 이것이 늘 사실은 아니지만, 그래도 충분히 여러 번 사실로 입증되었기 때문에 크라우드소싱은 유용하며 대부분 믿을 만하다. 돈을 주고 전문가 집단을 고용하는 것보다 훨씬 비용을 절감할 수 있는 대안으로 작용하는 경우도 많다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 184p] 크라우드소싱의 경우, 전체 시스템의 품질을 좌우하는 결정적인 요소는 그것을 사용하는 사용자의 숫자다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 178p] 인간은 본능적으로 어린아이, 심지어 자기와 친척 관계가 아닌 어린아이라도 보호하도록 만들어져 있다. 테러리스트의 공격이나 전쟁의 잔혹행위에 대한 기사를 읽을 때마다 가장 비통하고 격한 반응을 불러일으키는 것은 아이들이 입은 피해다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 176p]당신의 정리 스타일과 시스템을 자신의 성격과 조화시키는 것이 중요하다.
+    <br><br>
 
     <a></a>
     [정리하는 뇌 171p] 여기서 일상의 활동을 기억하기 위한 두 가지 전략이 나온다. 하나는 우리가 하는 모든 일에서 새로움의 느낌을 회복하려고 노력하는 것이다. 물론 말이 쉽지 실천은 녹록치 않다. 하지만 우리가 선(禪) 같은 맑은 정신을 얻고 자기가 하는 일에 주의를 기울이며 미래와 과거에 대한 생각들을 내려놓을 수만 있다면, 매 순간이 특별해지기 때문에 매 순간을 기억하게 된다.
