--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -58,6 +58,33 @@
 
 
 
+    <a></a>
+    [정리하는 뇌 367p] 베이즈식 갱신: 자신의 특정 상황과 관련 있는 통계를 찾아서 활용해야 한다. 해당 차원에서 당신과 좀 더 밀접하게 닮은 사람들의 집합으로 문제를 국한시킴으로써 확률에 대한 추정을 개선할 수 있다. 예컨대, 여기서 중요한 질문은 "내가 뇌졸중에 걸릴 확률은 얼마인가?"가 아니라 "나와 나이, 성별, 혈압, 콜레스테롤 수치가 비슷한 사람이 뇌줄중에 걸릴 확률은 얼마인가?"가 되어야 한다. 이에 대답하기 위해서는 의료과학과 예술이 만나야 한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 352p] 무언가에 압도된 기분이 들면 우리는 자신의 의사결정 과정을 차단해버리는 경향이 있다. 이는 실험으로도 밝혀진 부분이다. 전문가의 의견을 듣는 기회와 함께 선택을 부여받은 사람은 독립적인 의사결정을 관할하는 뇌 영역의 사용을 중단하고 그 결정을 전문가에게 넘겨버린다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 339p] 우리 뇌가 제대로 작동하지 못하는 경우는 확률이 낮기는 낮은데 적당히 낮은 경우다. 판단을 정리하려면 기저율 정보를 관련 있는 다른 진단 정보와 결합해야 한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 338p] 대표성 휴리스틱(representativeness heuristic): 사람이나 상황이 한 가지를 대표하는 것으로 보이면, 그로 인해 사실상 뇌의 추론 능력이 압도당하고, 통계 정보나 기저율 정보를 무시하게 된다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 331p] 두 종류의 확률 중 하나는 객관적이고 다른 하나는 주관적이지만, 그 차이를 알아차리는 사람은 거의 없다. 우리는 일상의 대화에서 확률이라는 단어를 사용하면서 무의식중에 그 두 가지를 같은 것으로 취급한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 327p] 정리된 마음과 정리된 삶을 유지하기 위해서는 가능한 한 최고의 결정을 내려야 한다. 나쁜 결정은 일이 잘못됐을 때 이를 수습하고 다시 결정 내리는 데 드는 시간은 물론이고 힘과 에너지마저도 소진시킨다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 326p] 의사결정이 어려운 이유는 본질적으로 불확실성을 내포하기 때문이다. 불확실성이 없다면 결정 내리기는 식은 죽 먹기일 것이다. 불확실성이 존재하는 이유는 우리가 미래를 알 수 없기 때문이다. 과연 지금 내린 결정이 최고의 결과로 이어질지 우리는 알지 못한다. 인지과학은 우리가 직감이나 직관에 의지해서 결정하면 종종 나쁜 결정으로 이어진다는 것을 가르쳐주었다. 특히나 통계적 정보가 입수 가능한 상태에서는 더더욱 그렇다. 우리의 본능과 뇌는 확률적 사고를 하도록 진화하지 않았다.
+    <br><br>
 
     <a></a>
     [정리하는 뇌 323p] 창조적이라는 말은 비선형이 선형을 침범해 들어가고, 그 결과물에 대해 통제력을 행사할 수 있도록 허락한다는 의미다. 과학과 예술에서 지난 수천년간 이뤄진 주요 성취는 연역이 아닌 귀납 과정을 필요로 했다. 알려진 것으로부터 알려지지 않은 것을 추정해야 했고, 때로는 다음에 올 것은 무엇인지 무엇이 옳은 것인지 어림짐작해야 할 때도 많았다. 한마디로 말해서 뛰어난 창의력에 곁들여 어느 정도 운이 필요했다. 어떻게 이런 진전이 이루어질 수 있을까 하는 미스터리도 존재하지만, 우리는 자기가 원하는 대로 삶을 꾸릴 수 있다. 우리는 시간을 정리하고 마음을 정리함으로써 창의력을 위한 시간, 마음이 몽상에 빠질 수 있는 시간, 우리 각자가 우리 시대에 자기만의 독특한 기여를 할 수 있는 시간을 남겨놓을 수 있다.
@@ -259,7 +286,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 199p] 인간이 다른 사람들과 어울리는 데 있어서 가장 중요한 성격은 바로 상냥함이다. 과학 문헌을 보면 상냥하다는 것은 협조적이고, 친화적이고, 남을 배려하고, 잘 돕는 것을 가리킨다. 이런 성격은 평생에 걸쳐 대략 안정적으로 나타나며 아동기 초기부터 드러난다. 상냥한 사람은 분노나 실망 같은 바람직하지 않은 감정을 조절할 수 있다. 이런 조절은 전두엽에서 일어난다. 전두엽은 충동을 통제하고 부정적인 감ㅈ정을 조절하게 도와주는 부위로, 관리자 주의 모드를 지배하는 바로 그 뇌 영역이다. 부상, 뇌졸중, 알츠하이머, 뇌종양 등으로 전두엽이 손상되면 충동조절 능력 및 정서적 안정성과 함께 상냥함이 제일 먼저 사라지는 경우가 많다. 감정조절 중 일부는 학습 가능하다. 어릴 때 충동조절과 분노조절에 대한 정적 강화(positive reinforcement)를 학습한 아이는 커서 상냥한 어른이 된다. 여러분도 짐작하겠지만, 상냥한 사람이 된다는 것은 긍정적인 사회관계를 유지하는 데 엄청난 이점으로 작용한다.
+    [정리하는 뇌 199p] 인간이 다른 사람들과 어울리는 데 있어서 가장 중요한 성격은 바로 상냥함이다. 과학 문헌을 보면 상냥하다는 것은 협조적이고, 친화적이고, 남을 배려하고, 잘 돕는 것을 가리킨다. 이런 성격은 평생에 걸쳐 대략 안정적으로 나타나며 아동기 초기부터 드러난다. 상냥한 사람은 분노나 실망 같은 바람직하지 않은 감정을 조절할 수 있다. 이런 조절은 전두엽에서 일어난다. 전두엽은 충동을 통제하고 부정적인 감정을 조절하게 도와주는 부위로, 관리자 주의 모드를 지배하는 바로 그 뇌 영역이다. 부상, 뇌졸중, 알츠하이머, 뇌종양 등으로 전두엽이 손상되면 충동조절 능력 및 정서적 안정성과 함께 상냥함이 제일 먼저 사라지는 경우가 많다. 감정조절 중 일부는 학습 가능하다. 어릴 때 충동조절과 분노조절에 대한 정적 강화(positive reinforcement)를 학습한 아이는 커서 상냥한 어른이 된다. 여러분도 짐작하겠지만, 상냥한 사람이 된다는 것은 긍정적인 사회관계를 유지하는 데 엄청난 이점으로 작용한다.
     <br><br>
 
     <a></a>
