--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -64,6 +64,13 @@
 
 
 
+
+  <a>안드로이드 JAVA : 02. Java - 03. 자료형 (개념)</a><br>
+  <a>안드로이드 JAVA : 02. Java - 02. 변수 (개념)</a><br>
+  <a>안드로이드 JAVA : 02. Java - 01. 자바란</a><br>
+
+  <a>class101 자청 자동수익 강의 7-9</a><br>
+
   <a>안드로이드 JAVA : 01. View - 16. 과제 풀이 (3)</a><br>
   <a>안드로이드 JAVA : 01. View - 15. 과제 풀이 (2)</a><br>
   <a>안드로이드 JAVA : 01. View - 14. 과제 풀이 (1)</a><br>
