--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -155,7 +155,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 298p] 자신의 가치를 과제의 성과와 분리하는 것 역시 중요하다. 자신감이란 일찍 실패를 경험할 수도 있고, 그것도 다 과정의 일부이니 괜찮다는 사실을 받아들이는 것이다. 박학한 작가 조지 플림톤은 성공한 사람들은 역설적으로 우리가 대부분 실패자라 생각하는 사람들보다 오히려 더 많은 실패를 경험한다고 지적했다. 성공한 사람들은 실패와 차질을 다른 사람들과는 아주 다른 방식으로 대한다고 ㅍ표현하면 이해하기 쉬울 것이다. 성공하지 못한 사람들은 실퍃하거나 차질이 생기면 윽것으로 자신의 경력이 끝장났다고 생각하고 이렇게 결론 내린다. "이것은 나하고 안 맞아." 반면 성공한 사람은 차질이 생길 때마다 그것을 목표를 완수하는 데 없어서는 안 될 지식을 얻게 되는 기회라 여긴다. 성공한 사람의 내면의 대화는 이런 식으로 흘러간다. '목표를 달성하는 데 필요한 것은 모두 다 알고 있다고 생각했는데, 이번 경험으로 그렇지 않다는 것을 알게 됐어. 이것을 알게 되었으니 이제 다시 시작할 수 있어.' 성공한 사람들은 앞길이 험하리라 예상할 줄 알고, 그런 험한 길이 순조로운 여정을 방해하더라도 포기하지 않는다. 그 모든 것을 과정의 일부라 생각하기 때문이다. 스틸의 말처럼 이들은 삶은 편안해야 한다는 잘못된 믿음에 굴복하지 않는다.
+    [정리하는 뇌 298p] 자신의 가치를 과제의 성과와 분리하는 것 역시 중요하다. 자신감이란 일찍 실패를 경험할 수도 있고, 그것도 다 과정의 일부이니 괜찮다는 사실을 받아들이는 것이다. 박학한 작가 조지 플림톤은 성공한 사람들은 역설적으로 우리가 대부분 실패자라 생각하는 사람들보다 오히려 더 많은 실패를 경험한다고 지적했다. 성공한 사람들은 실패와 차질을 다른 사람들과는 아주 다른 방식으로 대한다고 표현하면 이해하기 쉬울 것이다. 성공하지 못한 사람들은 실패하거나 차질이 생기면 그것으로 자신의 경력이 끝장났다고 생각하고 이렇게 결론 내린다. "이것은 나하고 안 맞아." 반면 성공한 사람은 차질이 생길 때마다 그것을 목표를 완수하는 데 없어서는 안 될 지식을 얻게 되는 기회라 여긴다. 성공한 사람의 내면의 대화는 이런 식으로 흘러간다. '목표를 달성하는 데 필요한 것은 모두 다 알고 있다고 생각했는데, 이번 경험으로 그렇지 않다는 것을 알게 됐어. 이것을 알게 되었으니 이제 다시 시작할 수 있어.' 성공한 사람들은 앞길이 험하리라 예상할 줄 알고, 그런 험한 길이 순조로운 여정을 방해하더라도 포기하지 않는다. 그 모든 것을 과정의 일부라 생각하기 때문이다. 스틸의 말처럼 이들은 삶은 편안해야 한다는 잘못된 믿음에 굴복하지 않는다.
     <br><br>
 
     <a></a>
@@ -203,7 +203,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 262-263p] 일을 진행하는 것과 그 진행 상황을 추적 관찰하는 것 사이의 균형이 필요하다. 이것은 여러 단계로 구성된 프로젝트에서는 필수적인 부분이다. 각각의 단계를 진행하려면 우리는 때때로 일을 멈추고 그것을 객관적으로 살펴서 일을 제대로 하고 있는지 확인하고 지금까지의 결과에 즐거워할 필요가 있다. 우리는 머릿속에서 한 걸음 뒤로 물러나 자기가한 일을 점검하고무언가 새로 할 필요가 있는지, 아니면 앞으로 계속 나아가도 되는지 생각한다. (중략) 일을 하고, 그 일을 점검하고, 조정하고, 다시 앞으로 나아간다. 실제 세상에 있는 것과 당신의 머릿속에 있는 것에 대한 비교를 조정하는 것은 전전두엽피질이다. (중략) 창조적인 일이든, 일상적인 일이든 우리는 일과 평가 사이를 계속 왔다 갔다하면서 머릿속에 있는 이상적인 이미지와 눈앞에서 진행되는 일을 비교한다. 이렇게 끊임없이 앞뒤로 왔다 갔다 하는 일은 우리 뇌가 하는 일 중 대사 소비가 가장 많은 것 중 하나다. 우리는 시간, 그리고 순간으로부터 한 발 물러나 전체적인 큰 그림을 바라본다. 눈에 보이는 것이 마음에 들면 다시 과제로 돌아와 앞으로 나아가고, 마음에 들지 않으면 개념적 실수나 물리적 실수를 수정하기 위해 뒤로 되짚어간다. 이렇게 주의와 관점을 전환하는 일은 무척 힘들다. 그리고 멀티태스킹과 마찬가지로 한 가지 일에 몰두할 때 보다 뇌가 영양분을 많이 사용한다.
+    [정리하는 뇌 262-263p] 일을 진행하는 것과 그 진행 상황을 추적 관찰하는 것 사이의 균형이 필요하다. 이것은 여러 단계로 구성된 프로젝트에서는 필수적인 부분이다. 각각의 단계를 진행하려면 우리는 때때로 일을 멈추고 그것을 객관적으로 살펴서 일을 제대로 하고 있는지 확인하고 지금까지의 결과에 즐거워할 필요가 있다. 우리는 머릿속에서 한 걸음 뒤로 물러나 자기가 한 일을 점검하고 무언가 새로 할 필요가 있는지, 아니면 앞으로 계속 나아가도 되는지 생각한다. (중략) 일을 하고, 그 일을 점검하고, 조정하고, 다시 앞으로 나아간다. 실제 세상에 있는 것과 당신의 머릿속에 있는 것에 대한 비교를 조정하는 것은 전전두엽피질이다. (중략) 창조적인 일이든, 일상적인 일이든 우리는 일과 평가 사이를 계속 왔다 갔다 하면서 머릿속에 있는 이상적인 이미지와 눈앞에서 진행되는 일을 비교한다. 이렇게 끊임없이 앞뒤로 왔다 갔다 하는 일은 우리 뇌가 하는 일 중 대사 소비가 가장 많은 것 중 하나다. 우리는 시간, 그리고 순간으로부터 한 발 물러나 전체적인 큰 그림을 바라본다. 눈에 보이는 것이 마음에 들면 다시 과제로 돌아와 앞으로 나아가고, 마음에 들지 않으면 개념적 실수나 물리적 실수를 수정하기 위해 뒤로 되짚어간다. 이렇게 주의와 관점을 전환하는 일은 무척 힘들다. 그리고 멀티태스킹과 마찬가지로 한 가지 일에 몰두할 때 보다 뇌가 영양분을 많이 사용한다.
     <br><br>
 
     <a></a>
@@ -211,7 +211,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 258p] 개인마다 인지 스타일에 차이가 있기 때문에 멀티태스킹에 존재하는 균형은 결국 집중력이냐, 창의력이냐의 문제로 귀결될 때가 많다. 누군가 집중하고 있다고 말하면, 그것은 보통 그 사람이 내적이든외적이든 지금 당장 눈앞에 있는 것에 주의를 기울이고 정신이 산만해진느 것을 피하고 있음을 의미한다. 반면 창의력이 있다는 것은 종종 별개의 것들을 연계하는 능력이 있음을 의미한다. 비유, 은유를 통해 새로운 아이디어를 탐험하거나, 서로 이어져 있음을 미처 깨닫지 못하고 있던 것을 하나로 엮으려고 노력할 때 우리는 그것을 창의적 발견이라 생각한다. 이런 발견을 하려면 집중과 더욱 폭넓은 시야 사이의 정교한 균형이 필요하다.
+    [정리하는 뇌 258p] 개인마다 인지 스타일에 차이가 있기 때문에 멀티태스킹에 존재하는 균형은 결국 집중력이냐, 창의력이냐의 문제로 귀결될 때가 많다. 누군가 집중하고 있다고 말하면, 그것은 보통 그 사람이 내적이든 외적이든 지금 당장 눈앞에 있는 것에 주의를 기울이고 정신이 산만해지는 것을 피하고 있음을 의미한다. 반면 창의력이 있다는 것은 종종 별개의 것들을 연계하는 능력이 있음을 의미한다. 비유, 은유를 통해 새로운 아이디어를 탐험하거나, 서로 이어져 있음을 미처 깨닫지 못하고 있던 것을 하나로 엮으려고 노력할 때 우리는 그것을 창의적 발견이라 생각한다. 이런 발견을 하려면 집중과 더욱 폭넓은 시야 사이의 정교한 균형이 필요하다.
     <br><br>
 
     <a></a>
