--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -187,7 +187,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 265-266p] 자기가 만든 동기 체계를 신뢰하지 못하는 뇌의 편향을 극복하려면 엄청난 절제력이 필요하다. 왜 그럴까? 기본적 귀인 오류에서와 마찬가지로, 우리는 타임의 마음속은 들여다보지 못하고 자기 것만 볼 수 있기 때문이다. 우리는 어떤 결론에 도달할 때까지 결정을 내리는 과정에서 겪었던 초조함과 망설임, 그리고 그 모든 미묘한 부분들을 고통스러울 정도로 속속들이 인식하고 있다. 하지만 다른 사람의 마음속에서 일어난 과정에는 접근하지 못한다. 그래서 우리는 자신의 결정보다는 그들이 보여주는 확실성에 끌리는 경우가 많다.
+    [정리하는 뇌 265-266p] 자기가 만든 동기 체계를 신뢰하지 못하는 뇌의 편향을 극복하려면 엄청난 절제력이 필요하다. 왜 그럴까? 기본적 귀인 오류에서와 마찬가지로, 우리는 타인의 마음속은 들여다보지 못하고 자기 것만 볼 수 있기 때문이다. 우리는 어떤 결론에 도달할 때까지 결정을 내리는 과정에서 겪었던 초조함과 망설임, 그리고 그 모든 미묘한 부분들을 고통스러울 정도로 속속들이 인식하고 있다. 하지만 다른 사람의 마음속에서 일어난 과정에는 접근하지 못한다. 그래서 우리는 자신의 결정보다는 그들이 보여주는 확실성에 끌리는 경우가 많다.
     <br><br>
 
     <a></a>
@@ -251,7 +251,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 230p] 사람들은 자신이 경험하는 생리적 상태와 일관성 있는 믿음을 만들어내기 위해 상당한 인지적 노력을 기울인다. 일단 그걿게 한 다음에는 이 과정의 결과가 비교적 오래 지속되어 변화에 저항한다. 하지만 이것은 모르는 사이에 진행되는 판단의 오류다.
+    [정리하는 뇌 230p] 사람들은 자신이 경험하는 생리적 상태와 일관성 있는 믿음을 만들어내기 위해 상당한 인지적 노력을 기울인다. 일단 그렇게 한 다음에는 이 과정의 결과가 비교적 오래 지속되어 변화에 저항한다. 하지만 이것은 모르는 사이에 진행되는 판단의 오류다.
     <br><br>
 
     <a></a>
@@ -259,7 +259,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 227p] 결과 편향 기반의 추론(outcome-bias-based inference): 대부분의 경우, 결과는 예측에 도움이 되고, 우리가 판단을 내릴 때 추론을 시작하는 간단한 신호로 자공하기 때문이다. 이런 원시적인 무의식적 신호에 의지하면 대개 노력과 인지 과부하는 훨씬 줄이면서 꽤 정확한 판단을 내릴 수 있기 때문에 효율적이다. 정보 과부하의 시대에는 결과에 기반한 편향이 시간을 줄여주기도 하지만 그것 때문에 오류가 발생할 수도 있는 만큼, 그 점을 인식하고 있어야 한다.
+    [정리하는 뇌 227p] 결과 편향 기반의 추론(outcome-bias-based inference): 대부분의 경우, 결과는 예측에 도움이 되고, 우리가 판단을 내릴 때 추론을 시작하는 간단한 신호로 작동하기 때문이다. 이런 원시적인 무의식적 신호에 의지하면 대개 노력과 인지 과부하는 훨씬 줄이면서 꽤 정확한 판단을 내릴 수 있기 때문에 효율적이다. 정보 과부하의 시대에는 결과에 기반한 편향이 시간을 줄여주기도 하지만 그것 때문에 오류가 발생할 수도 있는 만큼, 그 점을 인식하고 있어야 한다.
     <br><br>
 
     <a></a>
