--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -65,6 +65,10 @@
 
 
 
+  <a>안드로이드 JAVA : 02. Java - 04. 변수,자료형 (실습)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-10</a><br>
+
   <a>안드로이드 JAVA : 02. Java - 03. 자료형 (개념)</a><br>
   <a>안드로이드 JAVA : 02. Java - 02. 변수 (개념)</a><br>
   <a>안드로이드 JAVA : 02. Java - 01. 자바란</a><br>
