--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,12 +56,19 @@
 
 
 
-  <h1>The War of Genesis[Lv.106]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.107]</h1><br><br><br>
 
 
 
 
 
+
+
+
+
+  <a>안드로이드 JAVA : 02. Java - 06. 메소드 (실습)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-12</a><br>
 
   <a>안드로이드 JAVA : 02. Java - 05. 메소드 (개념)</a><br>
 
