--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -64,7 +64,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 444-445p] 우리는 모두 자기가 한번에 많은 일을 할 수 있고, 자기의 주의력은 무한하다고 믿고 싶어 하지만, 이것은 끈질기게 이어지는 미신에 불과하다. 우리가 실제로 하는 일은 주의를 하나의 과제에서 다른 과제로 신속하게 옮겨가는 것밖에 없다. 그 결과, 두 가지 나쁜 일이 일어난다. 우린느 어느 한 과제에도 충분히 주의를 기울이지 못한다. 그리고 어떤 과제든 거기에 쏟는 주의의 질이 감소한다. 우리가 어느 한 가지 일을 할 때는 뇌의 백일몽 네트워크에 이로운 변화가 일어나고 연결성이 좋아진다.
+    [정리하는 뇌 444-445p] 우리는 모두 자기가 한번에 많은 일을 할 수 있고, 자기의 주의력은 무한하다고 믿고 싶어 하지만, 이것은 끈질기게 이어지는 미신에 불과하다. 우리가 실제로 하는 일은 주의를 하나의 과제에서 다른 과제로 신속하게 옮겨가는 것밖에 없다. 그 결과, 두 가지 나쁜 일이 일어난다. 우리는 어느 한 과제에도 충분히 주의를 기울이지 못한다. 그리고 어떤 과제든 거기에 쏟는 주의의 질이 감소한다. 우리가 어느 한 가지 일을 할 때는 뇌의 백일몽 네트워크에 이로운 변화가 일어나고 연결성이 좋아진다.
     <br><br>
 
     <a></a>
